--- a/localisation/english/MD_focus_EU_l_english.yml
+++ b/localisation/english/MD_focus_EU_l_english.yml
@@ -2378,7 +2378,7 @@
  SMA_Communist-State_loc_key: "[SMA.Communist-State_L_icon] ([SMA.GetFlag] [?SMA.MEP_Communist-State]) "
  MNC_Communist-State_loc_key: "[MNC.Communist-State_L_icon] ([MNC.GetFlag] [?MNC.MEP_Communist-State]) "
  ADO_Communist-State_loc_key: "[ADO.Communist-State_L_icon] ([ADO.GetFlag] [?ADO.MEP_Communist-State]) "
- LIC_Communist-State_loc_key: "[LIC.Communist-State_L_icon] ([LIC.GetFlag] [?LIC.MEP_Communist-State) "
+ LIC_Communist-State_loc_key: "[LIC.Communist-State_L_icon] ([LIC.GetFlag] [?LIC.MEP_Communist-State]) "
 
  ALB_anarchist_communism_loc_key: "[ALB.anarchist_communism_L_icon] ([ALB.GetFlag] [?ALB.MEP_anarchist_communism]) "
  ARM_anarchist_communism_loc_key: "[ARM.anarchist_communism_L_icon] ([ARM.GetFlag] [?ARM.MEP_anarchist_communism]) "
