--- a/localisation/english/equip_air_l_english.yml
+++ b/localisation/english/equip_air_l_english.yml
@@ -31,3 +31,4 @@
  category_trans_plane: "Transport Planes"
  category_Air_UAV: "Unmanned Aerial Vehicles"
  category_AA_missile: "Anti-Aircraft Missiles"
+ AIR_WING_NAME_FRA_MODERN:0 "$NR$e $NAME$"
