--- a/localisation/french/equip_air_l_french.yml
+++ b/localisation/french/equip_air_l_french.yml
@@ -29,3 +29,4 @@
  category_trans_plane: "Avions de transport"
  category_Air_UAV: "Drones de combat"
  category_AA_missile: "Missiles antiaériens"
+ AIR_WING_NAME_FRA_MODERN:0 "$NR$e $NAME$"
