--- a/localisation/russian/equip_air_l_russian.yml
+++ b/localisation/russian/equip_air_l_russian.yml
@@ -31,3 +31,4 @@
  category_trans_plane: "Транспортная авиация"
  category_Air_UAV: "БПЛА"
  category_AA_missile: "Ракеты ПВО"
+ AIR_WING_NAME_FRA_MODERN:0 "$NR$e $NAME$"
