--- a/localisation/russian/equipment_l_russian.yml
+++ b/localisation/russian/equipment_l_russian.yml
@@ -1880,8 +1880,8 @@
 
  FRA_Anti_tank_0: "LRAC F1"
  FRA_Anti_tank_1: "MILAN"
- FRA_Anti_tank_2: "MILAN II"
- FRA_Anti_tank_2_short: "MILAN II"
+ FRA_Anti_tank_2: "Akeron MP"
+ FRA_Anti_tank_2_short: "Akeron MP"
  FRA_Anti_tank_3: "Missile Anti-Char"
  FRA_Anti_tank_3_short: "MAC"
  FRA_Anti_tank_4: "MAC II"
