--- a/localisation/english/MD_defence_companies_l_english.yml
+++ b/localisation/english/MD_defence_companies_l_english.yml
@@ -66,8 +66,8 @@
  FIN_sako_materiel_manufacturer: "SAKO"
  FIN_meyer_turku_naval_manufacturer: "Meyer Turku"
  FRA_airbus_helicopters_tank_manufacturer: "Airbus Helicopters"
- FRA_nexter_materiel_manufacturer: "Nexter - Materiel Division"
- FRA_nexter_tank_manufacturer: "Nexter - Armored Vehicle Division"
+ FRA_nexter_materiel_manufacturer: "GIAT Industries - Materiel Division"
+ FRA_nexter_tank_manufacturer: "GIAT Industries - Armored Vehicle Division"
  FRA_dassault_aviation_aircraft_manufacturer: "Dassault Aviation"
  FRA_naval_group_naval_manufacturer: "Naval Group - Surface Division"
  FRA_naval_group_naval_manufacturer2: "Naval Group - Submarine Division"
