--- a/localisation/english/equipment_l_english.yml
+++ b/localisation/english/equipment_l_english.yml
@@ -1767,8 +1767,8 @@
 
  FRA_Anti_tank_0: "LRAC F1"
  FRA_Anti_tank_1: "MILAN"
- FRA_Anti_tank_2: "MILAN II"
- FRA_Anti_tank_2_short: "MILAN II"
+ FRA_Anti_tank_2: "Akeron MP"
+ FRA_Anti_tank_2_short: "Akeron MP"
  FRA_Anti_tank_3: "Missile Anti-Char"
  FRA_Anti_tank_3_short: "MAC"
  FRA_Anti_tank_4: "MAC II"
@@ -4123,8 +4123,8 @@
  SOV_Anti_tank_0_desc: "Used in many wars and on many vehicles."
  SOV_Anti_tank_1: "AT-4 Fagot"
  SOV_Anti_tank_1_desc: "Much lighter than the other AT-systems, and older. The AT can only hit at 70-2,500 m which compared to others is much lesser range than the others but also cheaper."
- SOV_Anti_tank_2: "9M133 Kornet"
- SOV_Anti_tank_2_desc: "9M133 Kornet"
+ SOV_Anti_tank_2: "9M133M Kornet-M"
+ SOV_Anti_tank_2_desc: "9M133M Kornet-M"
  SOV_Anti_tank_3: "AT-22"
  SOV_Anti_tank_4: "AT-45"
 
@@ -10009,8 +10009,8 @@
  BSH_Anti_tank_0_desc: "Used in many wars and on many vehicles."
  BSH_Anti_tank_1: "AT-4 Fagot"
  BSH_Anti_tank_1_desc: "Much lighter than the other AT-systems, and older. The AT can only hit at 70-2,500 m which compared to others is much lesser range than the others but also cheaper."
- BSH_Anti_tank_2: "9M133 Kornet"
- BSH_Anti_tank_2_desc: "9M133 Kornet"
+ BSH_Anti_tank_2: "9M133M Kornet-M"
+ BSH_Anti_tank_2_desc: "9M133M Kornet-M"
  BSH_Anti_tank_3: "AT-22"
  BSH_Anti_tank_4: "AT-45"
 
@@ -10120,8 +10120,8 @@
  CRM_Anti_tank_0_desc: "Used in many wars and on many vehicles."
  CRM_Anti_tank_1: "AT-4 Fagot"
  CRM_Anti_tank_1_desc: "Much lighter than the other AT-systems, and older. The AT can only hit at 70-2,500 m which compared to others is much lesser range than the others but also cheaper."
- CRM_Anti_tank_2: "9M133 Kornet"
- CRM_Anti_tank_2_desc: "9M133 Kornet"
+ CRM_Anti_tank_2: "9M133M Kornet-M"
+ CRM_Anti_tank_2_desc: "9M133M Kornet-M"
  CRM_Anti_tank_3: "AT-22"
  CRM_Anti_tank_4: "AT-45"
 
@@ -10322,8 +10322,8 @@
  TAT_Anti_tank_0_desc: "Used in many wars and on many vehicles."
  TAT_Anti_tank_1: "AT-4 Fagot"
  TAT_Anti_tank_1_desc: "Much lighter than the other AT-systems, and older. The AT can only hit at 70-2,500 m which compared to others is much lesser range than the others but also cheaper."
- TAT_Anti_tank_2: "9M133 Kornet"
- TAT_Anti_tank_2_desc: "9M133 Kornet"
+ TAT_Anti_tank_2: "9M133M Kornet-M"
+ TAT_Anti_tank_2_desc: "9M133M Kornet-M"
  TAT_Anti_tank_3: "AT-22"
  TAT_Anti_tank_4: "AT-45"
 
@@ -10617,8 +10617,8 @@
  WAG_Anti_tank_0_desc: "Used in many wars and on many vehicles."
  WAG_Anti_tank_1: "AT-4 Fagot"
  WAG_Anti_tank_1_desc: "Much lighter than the other AT-systems, and older. The AT can only hit at 70-2,500 m which compared to others is much lesser range than the others but also cheaper."
- WAG_Anti_tank_2: "9M133 Kornet"
- WAG_Anti_tank_2_desc: "9M133 Kornet"
+ WAG_Anti_tank_2: "9M133M Kornet-M"
+ WAG_Anti_tank_2_desc: "9M133M Kornet-M"
  WAG_Anti_tank_3: "AT-22"
  WAG_Anti_tank_4: "AT-45"
 
@@ -10795,8 +10795,8 @@ PMR_Anti_tank_0: "RPG-7"
 PMR_Anti_tank_0_desc: "Used in many wars and on many vehicles."
 PMR_Anti_tank_1: "AT-4 Fagot"
 PMR_Anti_tank_1_desc: "Much lighter than the other AT-systems, and older. The AT can only hit at 70-2,500 m which compared to others is much lesser range than the others but also cheaper."
-PMR_Anti_tank_2: "9M133 Kornet"
-PMR_Anti_tank_2_desc: "9M133 Kornet"
+PMR_Anti_tank_2: "9M133M Kornet-M"
+PMR_Anti_tank_2_desc: "9M133M Kornet-M"
 
 
 PMR_MBT_1: "T-55"
