--- a/localisation/french/equipment_l_french.yml
+++ b/localisation/french/equipment_l_french.yml
@@ -1526,8 +1526,8 @@
  FRA_IFV_8_short: "AMX-20C"
  FRA_Anti_tank_0: "LRAC F1"
  FRA_Anti_tank_1: "MILAN"
- FRA_Anti_tank_2: "MILAN II"
- FRA_Anti_tank_2_short: "MILAN II"
+ FRA_Anti_tank_2: "Akeron MP"
+ FRA_Anti_tank_2_short: "Akeron MP"
  FRA_Anti_tank_3: "Missile anti-char"
  FRA_Anti_tank_3_short: "MAC"
  FRA_Anti_tank_4: "MAC II"
@@ -3486,8 +3486,8 @@
  SOV_Anti_tank_0_desc: "Utilisé dans de nombreuses guerres et sur de nombreux véhicules."
  SOV_Anti_tank_1: "AT-4 Fagot"
  SOV_Anti_tank_1_desc: "Beaucoup plus léger que les autres systèmes antichars, et plus ancien. L'AT-4 ne peut frapper qu'à une distance de 70 à 2 500 m, ce qui, comparé aux autres, représente une portée bien moindre, mais aussi un coût moindre."
- SOV_Anti_tank_2: "9M133 Kornet"
- SOV_Anti_tank_2_desc: "9M133 Kornet"
+ SOV_Anti_tank_2: "9M133M Kornet-M"
+ SOV_Anti_tank_2_desc: "9M133M Kornet-M"
  SOV_Anti_tank_3: "AT-22"
  SOV_Anti_tank_4: "AT-45"
  SOV_MBT_1: "T-55"
@@ -8338,8 +8338,8 @@
  BSH_Anti_tank_0_desc: "Utilisé dans de nombreuses guerres et sur de nombreux véhicules."
  BSH_Anti_tank_1: "AT-4 Fagot"
  BSH_Anti_tank_1_desc: "Beaucoup plus léger que les autres systèmes AT et plus ancien. L'AT ne peut atteindre qu'à une distance de 70 à 2 500 m, ce qui, comparé aux autres, représente une portée bien moindre que les autres mais également moins cher."
- BSH_Anti_tank_2: "9M133 Kornet"
- BSH_Anti_tank_2_desc: "9M133 Kornet"
+ BSH_Anti_tank_2: "9M133M Kornet-M"
+ BSH_Anti_tank_2_desc: "9M133M Kornet-M"
  BSH_Anti_tank_3: "AT-22"
  BSH_Anti_tank_4: "AT-45"
  BSH_MBT_1: "T-55"
@@ -8439,8 +8439,8 @@
  CRM_Anti_tank_0_desc: "Utilisé dans de nombreuses guerres et sur de nombreux véhicules."
  CRM_Anti_tank_1: "AT-4 Fagot"
  CRM_Anti_tank_1_desc: "Beaucoup plus léger que les autres systèmes AT et plus ancien. L'AT ne peut atteindre qu'à une distance de 70 à 2 500 m, ce qui, comparé aux autres, représente une portée bien moindre que les autres mais également moins cher."
- CRM_Anti_tank_2: "9M133 Kornet"
- CRM_Anti_tank_2_desc: "9M133 Kornet"
+ CRM_Anti_tank_2: "9M133M Kornet-M"
+ CRM_Anti_tank_2_desc: "9M133M Kornet-M"
  CRM_Anti_tank_3: "AT-22"
  CRM_Anti_tank_4: "AT-45"
  CRM_MBT_1: "T-55"
@@ -8619,8 +8619,8 @@
  TAT_Anti_tank_0_desc: "Utilisé dans de nombreuses guerres et sur de nombreux véhicules."
  TAT_Anti_tank_1: "AT-4 Fagot"
  TAT_Anti_tank_1_desc: "Beaucoup plus léger que les autres systèmes AT et plus ancien. L'AT ne peut atteindre qu'à une distance de 70 à 2 500 m, ce qui, comparé aux autres, représente une portée bien moindre que les autres mais également moins cher."
- TAT_Anti_tank_2: "9M133 Kornet"
- TAT_Anti_tank_2_desc: "9M133 Kornet"
+ TAT_Anti_tank_2: "9M133M Kornet-M"
+ TAT_Anti_tank_2_desc: "9M133M Kornet-M"
  TAT_Anti_tank_3: "AT-22"
  TAT_Anti_tank_4: "AT-45"
  TAT_MBT_1: "T-55"
@@ -8876,8 +8876,8 @@
  WAG_Anti_tank_0_desc: "Utilisé dans de nombreuses guerres et sur de nombreux véhicules."
  WAG_Anti_tank_1: "AT-4 Fagot"
  WAG_Anti_tank_1_desc: "Beaucoup plus léger que les autres systèmes AT et plus ancien. L'AT ne peut atteindre qu'à une distance de 70 à 2 500 m, ce qui, comparé aux autres, représente une portée bien moindre que les autres mais également moins cher."
- WAG_Anti_tank_2: "9M133 Kornet"
- WAG_Anti_tank_2_desc: "9M133 Kornet"
+ WAG_Anti_tank_2: "9M133M Kornet-M"
+ WAG_Anti_tank_2_desc: "9M133M Kornet-M"
  WAG_Anti_tank_3: "AT-22"
  WAG_Anti_tank_4: "AT-45"
  WAG_MBT_1: "T-55"
@@ -9027,8 +9027,8 @@
  PMR_Anti_tank_0_desc: "Utilisé dans de nombreuses guerres et sur de nombreux véhicules."
  PMR_Anti_tank_1: "AT-4 Fagot"
  PMR_Anti_tank_1_desc: "Beaucoup plus léger que les autres systèmes AT et plus ancien. L'AT ne peut atteindre qu'à une distance de 70 à 2 500 m, ce qui, comparé aux autres, représente une portée bien moindre que les autres mais également moins cher."
- PMR_Anti_tank_2: "9M133 Kornet"
- PMR_Anti_tank_2_desc: "9M133 Kornet"
+ PMR_Anti_tank_2: "9M133M Kornet-M"
+ PMR_Anti_tank_2_desc: "9M133M Kornet-M"
  PMR_MBT_1: "T-55"
  PMR_MBT_1_desc: "Le T-54/55 est peut-être le char le plus produit dans le monde. Conçu et produit dans les premières années de la guerre froide, il était la force et l'épine dorsale de l'Armée rouge. Autrefois redouté comme un symbole de la puissance russe, il est devenu la représentation iconique des forces blindées du Moyen-Orient détruites à la suite d'une frappe aérienne américaine."
  PMR_MBT_1_short: "T-55"
