--- a/localisation/russian/MD_defence_companies_l_russian.yml
+++ b/localisation/russian/MD_defence_companies_l_russian.yml
@@ -66,8 +66,8 @@
  FIN_sako_materiel_manufacturer: "SAKO"
  FIN_meyer_turku_naval_manufacturer: "Meyer Turku"
  FRA_airbus_helicopters_tank_manufacturer: "Airbus Helicopters"
- FRA_nexter_materiel_manufacturer: "Nexter"
- FRA_nexter_tank_manufacturer: "Nexter"
+ FRA_nexter_materiel_manufacturer: "GIAT Industries"
+ FRA_nexter_tank_manufacturer: "GIAT Industries"
  FRA_dassault_aviation_aircraft_manufacturer: "Dassault Aviation"
  FRA_naval_group_naval_manufacturer: "Naval Group"
  FRA_naval_group_naval_manufacturer2: "Naval Group"
