Squashed commit of the following:
commit cabdb8608d36b4b10bffb7a99c49e0384addca93
Author: BoNDeX <fdsfdfgv@gmail.com>
Date:   Mon Jun 10 21:02:49 2024 +0400

    gfx stuff

commit 3cf3ecc78c6d239b3af666446223c8d4b6a42895
Merge: 01ad9209ad 32b2628607
Author: AUG <48847923+lugdunum1715@users.noreply.github.com>
Date:   Mon Jun 10 12:37:39 2024 +0100

    Merge branch 'master' into gfx-input

commit 01ad9209ad36bc8a8b3d6e67cdb7604a195b3362
Author: AUG <48847923+lugdunum1715@users.noreply.github.com>
Date:   Mon Jun 10 11:56:01 2024 +0100

    TYPO

commit 8595257ca97a97de1640ad76b6e80deb005bf8e9
Author: AUG <48847923+lugdunum1715@users.noreply.github.com>
Date:   Mon Jun 10 11:24:50 2024 +0100

    typo

--- a/localisation/english/MD_focus_EU_l_english.yml
+++ b/localisation/english/MD_focus_EU_l_english.yml
@@ -1518,7 +1518,7 @@
  tooltip_EU_parliament_focus_EU601_EP_agenda_additional: "Grants [CYP.GetNameWithFlag], [CZE.GetNameWithFlag], [EST.GetNameWithFlag], [HUN.GetNameWithFlag], [LAT.GetNameWithFlag], [LIT.GetNameWithFlag], [MLT.GetNameWithFlag], [POL.GetNameWithFlag], [SLO.GetNameWithFlag], [SLV.GetNameWithFlag] and [ROM.GetNameWithFlag] §YEuropean Candidacy§!"
  tooltip_EU_parliament_focus_EU602_EP_agenda: "Places §Y2007 Enlargement of the European Union§! on the agenda of the EP.\n\nLeads to the following §C[EUU.GetNameWithFlag]§! Laws:\n- §Y2013 Enlargement of the European Union§!\n\n"
  tooltip_EU_parliament_focus_EU602_EP_agenda_additional: "Grants [BUL.GetNameWithFlag] and [ROM.GetNameWithFlag] §YEuropean Candidacy§!"
- tooltip_EU_parliament_focus_EU603_EP_agenda: "Places §Y2013 Enlargement of the European Union§! on the agenda of the EP.\n\nLeads to the following §C[EUU.GetNameWithFlag]§! Laws:\n- §YWestern Balkans Enlargement§!\n- §YTurkey§!\n- §YBlack Sea Enlargement§!\n- §YTurkey§!\n- §YBlack Sea Enlargement§!\n- §YCaucasus Enlargement§!\n- §YEuropean Economic Area§!\n- §YBelarus§!\n- §YInternal Enlargement§!\n\n"
+ tooltip_EU_parliament_focus_EU603_EP_agenda: "Places §Y2013 Enlargement of the European Union§! on the agenda of the EP.\n\nLeads to the following §C[EUU.GetNameWithFlag]§! Laws:\n- §YWestern Balkans Enlargement§!\n- §YTurkey§!\n- §YBlack Sea Enlargement§!\n- §YCaucasus Enlargement§!\n- §YEuropean Economic Area§!\n- §YBelarus§!\n- §YInternal Enlargement§!\n\n"
  tooltip_EU_parliament_focus_EU603_EP_agenda_additional: "Grants [CRO.GetNameWithFlag] §YEuropean Candidacy§!"
  tooltip_EU_parliament_focus_EU605_EP_agenda: "Places §YWestern Balkans Enlargement§! on the agenda of the EP.\n\n"
  tooltip_EU_parliament_focus_EU605_EP_agenda_additional: "Grants [ALB.GetNameWithFlag], [SER.GetNameWithFlag], [MNT.GetNameWithFlag], [FYR.GetNameWithFlag], [BOS.GetNameWithFlag] and [KOS.GetNameWithFlag] §YEuropean Candidacy§!"
@@ -2378,7 +2378,7 @@
  SMA_Communist-State_loc_key: "[SMA.Communist-State_L_icon] ([SMA.GetFlag] [?SMA.MEP_Communist-State]) "
  MNC_Communist-State_loc_key: "[MNC.Communist-State_L_icon] ([MNC.GetFlag] [?MNC.MEP_Communist-State]) "
  ADO_Communist-State_loc_key: "[ADO.Communist-State_L_icon] ([ADO.GetFlag] [?ADO.MEP_Communist-State]) "
- LIC_Communist-State_loc_key: "[LIC.Communist-State_L_icon] ([LIC.GetFlag] [?LIC.MEP_Communist-State) "
+ LIC_Communist-State_loc_key: "[LIC.Communist-State_L_icon] ([LIC.GetFlag] [?LIC.MEP_Communist-State]) "
 
  ALB_anarchist_communism_loc_key: "[ALB.anarchist_communism_L_icon] ([ALB.GetFlag] [?ALB.MEP_anarchist_communism]) "
  ARM_anarchist_communism_loc_key: "[ARM.anarchist_communism_L_icon] ([ARM.GetFlag] [?ARM.MEP_anarchist_communism]) "
