--- a/Changelog.txt
+++ b/Changelog.txt
@@ -176,6 +176,7 @@ v1.10.0
   - Cleaned up a tooltip for a San Marino investments to make it clearer
   - Fixed the spamming of a error regarding the DXX tags not having a capital scope
   - Germany will not receive events with debuffs pretaining to the East-West divide if Die Linke is in power
+  - Fixed cuban errors in focuses and blockade decisions
 
  Content:
   - NEW TREES: Kharkiv PR, Odessa PR, Serbia, Montenegro, Kosovo, Vojvodina, Cuba, Free States of America, Iraq
