--- a/localisation/english/MD_focus_CUB_l_english.yml
+++ b/localisation/english/MD_focus_CUB_l_english.yml
@@ -217,7 +217,7 @@
  cuba.49.d: "Finally, after a long debate, representatives of the Cuban democratic parties announced the most important agreement that was signed recently. Putting aside personal interests and putting state interests above, the democratic parties of the Island of freedom will unite into one, common coalition. This is the most important event in the history of the Cuban State"
  cuba.49.a: "We are united and invincible"
  CubaConf.50.t: "The Antillean Confederation"
- CubaConf.50.d: "[FROM.GetName]at a meeting of our governments, extended a formal invitation to join the Antillean Confederation. According to the government, the state will be based on equality, cooperation, and each member of the confederation will have equal rights"
+ CubaConf.50.d: "[FROM.GetName] at a meeting of our governments, extended a formal invitation to join the Antillean Confederation. According to the government, the state will be based on equality, cooperation, and each member of the confederation will have equal rights"
  CubaConf.50.a: "We agree"
  CubaConf.50.b: "No"
  cubaconf.51.t: "The Antillean Confederation"
@@ -1115,3 +1115,13 @@
  cuba_news.62.t: "Cuba amnesties several thousand prisoners"
  cuba_news.62.d: "The Cuban Government announced the release of 2,900 prisoners, many of whom had been convicted of "Offences against State security". Such steps from the Cuban government have almost never been taken."
  cuba_news.62.a: "Interesting"
+cuba.66.t: "Cuba requests the lifting of the blockade"
+cuba.66.d: "The Cuban government has requested that the embargo be lifted due to improved U.S.-Cuban relations and trade between the two nations."
+cuba.66.a: "Okay."
+cuba.66.b: "No."
+cuba.67.t: "USA has lifted the blockade"
+cuba.67.d: "Finally, our island can live comfortably."
+cuba.67.a: "Great!"
+cuba.68.t: "USA refused"
+cuba.68.d: "The blockade continues..."
+cuba.68.a: "Oh..."
