--- a/localisation/english/MD_focus_ITA_l_english.yml
+++ b/localisation/english/MD_focus_ITA_l_english.yml
@@ -486,7 +486,7 @@
  ITA_reduce_judgement_times: "Reduce Judgement Times"
  ITA_reduce_judgement_times_desc: "Even a minor case can require a decade in Italy to be solved, this is a osurce of major stress for the citizens involved and it's a great problem for businesses that expect compensation from the case."
  ITA_impose_better_checks_on_magistrates: "Improve Checks on Magistrates"
- ITA_impose_better_checks_on_magistrates_desc: "Magistrates operate under the scrutiny of their peers only, a situation that can lead to them defending each other and preventing problems from being addressed. We need to enlarga the system of checks on our judicial system to improve its funcionality."
+ ITA_impose_better_checks_on_magistrates_desc: "Magistrates operate under the scrutiny of their peers only, a situation that can lead to them defending each other and preventing problems from being addressed. We need to enlarge the system of checks on our judicial system to improve its functionality."
  ITA_refound_IRI: "Revive IRI"
  ITA_refound_IRI_desc: "The IRI (Instituto per la Ricostruzione Industriale/Institute for Industrial Reconstruction) is about to close. We can go back on this decision to keep a strong old tool to unify our interventions in the economy."
  ITA_refound_IRI_decision: "Revive IRI"
