--- a/localisation/english/MD_subideology_parties_l_english.yml
+++ b/localisation/english/MD_subideology_parties_l_english.yml
@@ -1544,10 +1544,10 @@
  SOV.Nat_Fascism_desc: "Fascist - National Bolsheviks are an ultra-nationalist movement fusing Stalinist ideology with elements of National Socialism."
  SOV.Nat_Populism: "£SOV_nationalist_right_wing_populist LDPR"
  SOV.Nat_Populism_icon: "£SOV_nationalist_right_wing_populist"
- SOV.Nat_Populism_desc: "Right Wing Populist - Liberal'no-demokraticheskaya partiya Rossii (Liberal-Democratic Party of Russia) is neither liberal or democratic, but instead seeks a authoritarian, populist and nationalist rebirth of a greatly expanded Russia Empire."
+ SOV.Nat_Populism_desc: "Right Wing Populist - Liberal'no-demokraticheskaya partiya Rossii (Liberal-Democratic Party of Russia) is neither liberal or democratic, but instead seeks a authoritarian, populist and nationalist rebirth of a greatly expanded Russian Empire."
  SOV.Nat_Populism_alt: "£SOV_ldpss LDPSS"
  SOV.Nat_Populism_alt_icon: "£SOV_ldpss"
- SOV.Nat_Populism_alt_desc: "Right Wing Populist - Liberal'no-demokraticheskaya partiya Sovietskogo Soyuza (Liberal-Democratic Party of the Soviet Union) is neither liberal or democratic, but instead seeks a authoritarian, populist and nationalist rebirth of a greatly expanded Russia Empire."
+ SOV.Nat_Populism_alt_desc: "Right Wing Populist - Liberal'no-demokraticheskaya partiya Sovietskogo Soyuza (Liberal-Democratic Party of the Soviet Union) is neither liberal or democratic, but instead seeks a authoritarian, populist and nationalist rebirth of a greatly expanded Russian Empire."
  SOV.Nat_Autocracy_wagner: "£SOV_Nat_Autocracy_wagner Partiya Wagnera"
  SOV.Nat_Autocracy_wagner_icon: "£SOV_Nat_Autocracy_wagner"
  SOV.Nat_Autocracy_wagner_desc: "The party was formed as a result of the expansion of Prigozhin's influence in the country. Wagner has become a militaristic ideology that gathers around itself all those who share it and are ready to defend the interests of Russia with a machine gun in their hands"
