--- a/localisation/english/MD_techs_l_english.yml
+++ b/localisation/english/MD_techs_l_english.yml
@@ -930,10 +930,10 @@
  concentrated_supply_depots_desc: "With our supplies concentrated in dedicated locations, we can better protect our supplies and better coordinate supply runs to line units."
  combat_supply_theory: "Combat Supply Theory"
  combat_supply_theory_desc: "Our military forces must adopt a single mindset for supply forces in the midst of combat."
- centralized_maintinance: "Centralized Maintenance Teams"
- centralized_maintinance_desc: "With a central location for repairs, maintenance, and more, our forces will be able to quickly coordinate the drop off of damaged vehicles to a central point, simplifying supply lines."
- decentralized_maintinance: "Decentralized Maintenance Teams"
- decentralized_maintinance_desc: "By dispersing our maintenance teams out into their individual units, we can ensure rapid repair and work performed on vehicles."
+ centralized_maintenance: "Centralized Maintenance Teams"
+ centralized_maintenance_desc: "With a central location for repairs, maintenance, and more, our forces will be able to quickly coordinate the drop off of damaged vehicles to a central point, simplifying supply lines."
+ decentralized_maintenance: "Decentralized Maintenance Teams"
+ decentralized_maintenance_desc: "By dispersing our maintenance teams out into their individual units, we can ensure rapid repair and work performed on vehicles."
  unit_level_supply: "Unit Level Supply"
  unit_level_supply_desc: "By putting the majority of our supplies out in individual combat units, we can sustain combat operations for a longer time."
  joint_supply_theory: "Joint Supply Theory"
@@ -1043,7 +1043,7 @@
  offensive_fires: "Offensive Fire Support"
  offensive_fires_desc: "By choosing which fire support options will assist us in combat, we can best determine how to direct those assets."
  integrated_close_air: "Integrated Helicopter Air Support"
- integrated_close_air_support: "By assigning attack helicopter companies to our combat arms elements, we can ensure every unit has the ability to call for fire support at a moments notice."
+ integrated_close_air_desc: "By assigning attack helicopter companies to our combat arms elements, we can ensure every unit has the ability to call for fire support at a moments notice."
  battlefield_support: "Battlefield Support"
  battlefield_support_desc: "Through either direct fire support, reconnaissance, or observation, our helicopter units will be a force multiplier to our combat line units."
  combat_unit_destruction: "Enemy Combatant Destruction"
@@ -1155,13 +1155,13 @@
  gunship_strike_force: "Gunship Strike Forces"
  gunship_strike_force_desc: "Instead of spreading forces out, we will mass our gunships into large formations, using them to strike deep into enemy lines."
  multi_weapon_pylons: "Multi-Weapon Pylons"
- multi_weapon_plyons_desc: "By making sure our gunships can equip a large range of weapons, we maximize their ability to engage any target they may be assigned."
+ multi_weapon_pylons_desc: "By making sure our gunships can equip a large range of weapons, we maximize their ability to engage any target they may be assigned."
  tank_hunter_focus: "Tank Hunters"
  tank_hunter_focus_desc: "Rather than making our helicopters waste their time with lesser prey, they instead will be equipped and trained to destroy enemy main battle tanks."
  infantry_hunter_focus: "Infantry Hunters"
  infantry_hunter_focus_desc: "Taking advantage of their speed, mobility, and firepower, our attack helicopters will be trained and equipped to blast holes through enemy infantry formations."
  eye_in_the_sky: "Eye in the Sky"
- eye_in_the_sky_dsec: "Trained not only for offensive operations, but reconnaissance, our gunship crews will gather valuable intelligence prior to any attacks."
+ eye_in_the_sky_desc: "Trained not only for offensive operations, but reconnaissance, our gunship crews will gather valuable intelligence prior to any attacks."
  rapid_exploitation: "Rapid Exploitation"
  rapid_exploitation_desc: "Utilizing their superior mobility, our gunship formations will quickly exploit any breakthroughs, taking advantage to jump on supply lines and wreck havoc behind enemy lines."
  roving_killbox: "Roving Killboxes"
