--- a/localisation/english/MD_subideology_parties_l_english.yml
+++ b/localisation/english/MD_subideology_parties_l_english.yml
@@ -874,12 +874,12 @@
  IRQ.Neutral_Muslim_Brotherhood_2017: "£IRQ_Neutral_Muslim_Brotherhood_small Muttahidoon"
  IRQ.Neutral_Muslim_Brotherhood_2017_icon: "£IRQ_Neutral_Muslim_Brotherhood_small"
  IRQ.Neutral_Muslim_Brotherhood_2017_desc: "Moderate Islamist - Muttahidoon (Uniters for Reform Coalition) is the primary Sunni political alliance in Iraq, and is dominated by the ideology of the pan-Islamist Muslim Brotherhood. It advocates strengthening the autonomy of Iraq's Sunni regions."
- IRQ.Nat_Fascism: "£IRQ_Nat_Autocracy_small Hizb al-Ba'th al-'Arabī al-Ishtirākī fī al-'Irāq"
  IRQ.Nat_Autocracy_icon: "£IRQ_Nat_Autocracy_small"
  IRQ.Nat_Populism: "£IRQ_sardist Al-Tayyār al-Sadrī"
  IRQ.Nat_Populism_icon: "£IRQ_sardist"
  IRQ.Nat_Populism_desc: "Iraqi Nationalism - Sadrist Integrity Party. The Sadrist Movement is a Shi'ite political movement with populist and nationalist values. While it's Sadrist militias have been backed by Iran, it seeks freedom from domination by any foreign power."
- IRQ.Nat_Fascism_desc: "Ba'athism - The Arab Socialist Ba'ath Party of Iraq came to power in a military coup in 1968. Originally the same party as the pan-Arabist Syrian Ba'ath Party, the Iraqi branch adopted Iraqi nationalism as it's core ideology, with the split evolving into a blood-feud where Syria backed Iran against Iraq. Under the leadership of Saddam Hussein, it has promoted the revival of a militaristic \"Greater Mesopotamia\" based on despotism and increasing islamification of the previously secular state."
+ IRQ.Nat_Fascism: "£IRQ_Nat_Autocracy_small Arab Socialist Ba'ath Party"
+ IRQ.Nat_Fascism_desc: "Ba'athism\n(Arabic, romanized: Hizb al-Ba'th al-'Arabī)\nThe Arab Socialist Ba'ath Party of Iraq came to power in a military coup in 1968. Originally the same party as the pan-Arabist Syrian Ba'ath Party, the Iraqi branch adopted Iraqi nationalism as it's core ideology, with the split evolving into a blood-feud where Syria backed Iran against Iraq. Under the leadership of Saddam Hussein, it has promoted the revival of a militaristic \"Greater Mesopotamia\" based on despotism and increasing islamification of the previously secular state."
  IRQ.Neutral_conservatism: "£generic_Neutral_conservatism_small Conservatists"
  IRQ.Neutral_conservatism_desc: ""
  IRQ.Nat_Autocracy: "£IRQ_armed_forces Riasat Arkan Aljaysh Aleiraqiu"
