--- a/localisation/english/MD_subideology_parties_l_english.yml
+++ b/localisation/english/MD_subideology_parties_l_english.yml
@@ -8187,8 +8187,8 @@
  URG.oligarchism: "£URG_non_aligned_oligarchism First Uruguayan Cartel (PCU)"
  URG.oligarchism_icon: "£URG_non_aligned_oligarchism"
  URG.oligarchism_desc: ""
- UZB.liberalism: "£GFX_UZB_western_liberal Erk Demokratik Partiyasi"
- UZB.liberalism_icon: "£GFX_UZB_western_liberal"
+ UZB.liberalism: "£UZB_western_liberal Erk Demokratik Partiyasi"
+ UZB.liberalism_icon: "£UZB_western_liberal"
  UZB.liberalism_desc: "The Erk Democratic Party is a political party in Uzbekistan formed in 1990 as a pro-independent party in the Soviet Union. It was the first registered political party in the history of Uzbekistan. Its charter was registered at the Ministry of Justice, Certificate of registration dated 3 September 1991, No. 039, which was signed by the minister of justice before the adoption of the law of Uzbekistan on political parties. The principal goals of activities, as written in the certificate on registration, are \"the foundation of the independent democratic republic for Uzbekistan.\" Since 1993, its headquarters have been in Istanbul, Turkey."
  UZB.Western_Autocracy: "£UZB_western_autocracy Birdamlik"
  UZB.Western_Autocracy_icon: "£UZB_western_autocracy"
