--- a/localisation/english/MD_subideology_parties_l_english.yml
+++ b/localisation/english/MD_subideology_parties_l_english.yml
@@ -1165,29 +1165,37 @@
  PER.oligarchism: "£generic_oligarchism_small Oligārsh-Haye Irān"
  PER.oligarchism_desc: ""
  PER.neutral_Social: "£PER_neutral_Social Nahżat-é āzādi-é Irān"
+ PER.neutral_Social_icon: "£PER_neutral_Social"
  PER.neutral_Social_desc: "Iranian Democracy - The Freedom Movement of Iran describe themselves as \"Muslims, Iranians, Constitutionalists and Mossadeghists\". It is amongst the oldest parties active in Iran, and they have been known to be a semi-opposition group to the Islamic Republic. The Freedom Movement of Iran is based on a moderate interpretation of Islam. It rejects both royal and clerical dictatorship and is in in favor of political and economic liberalism."
  PER.Neutral_Libertarian: "£generic_Neutral_Libertarian_small Ekhtyiâr Garâyan"
  PER.Neutral_Libertarian_desc: ""
  PER.Neutral_Autocracy: "£PER_Neutral_Autocracy Restârt"
+ PER.Neutral_Autocracy_icon: "£PER_Neutral_Autocracy"
  PER.Neutral_Autocracy_desc: "Conspiracists - Restart (Literally meaning a new start) is a mysticist political party headed by Seyed Mohammad Hosseini who believes in the creation of a Sufi Empire in Iran. The group has been described as one ran by conspiracists due to their beliefs, one example being that Khatami is a Zoroastrian Spy who wants to restore the Pahlavi dynasty. Furthermore, the group supports the creation of an Iranian version of the second amendment where citizens have the right to bear arms, and their party have adopted the slogan "Make Iran Great Again". The group also blames minorities such as Zoroastrians, Baha'is and Jews for Irans problems."
  PER.Neutral_Communism: "£PER_Neutral_Communism Hezb-é Kommunist-é Kârgari"
+ PER.Neutral_Communism_icon: "£PER_Neutral_Communism"
  PER.Neutral_Communism_desc: "Communism - Hezb-é Kommunist-é Kargari-ye Iran, also known as the Worker-Communist Party of Iran, was established in 1991 to overthrow the Islamic Republic and establish a socialist republic in its place."
  PER.Neutral_green: "£PER_Neutral_green Hezb-é Sabzhā-ye Irān"
+ PER.Neutral_green_icon: "£PER_Neutral_green"
  PER.Neutral_green_desc: "Green Politics - The Green party of Iran has a radical stance towards the Iranian Department of Environment and views the governmental body as a coverup for the mismanagements of the Islamic Republic."
  PER.Neutral_Muslim_Brotherhood: "£PER_Neutral_Muslim_Brotherhood Rāh-é Sabz-é Omid"
+ PER.Neutral_Muslim_Brotherhood_icon: "£PER_Neutral_Muslim_Brotherhood"
  PER.Neutral_Muslim_Brotherhood_desc: "Iranian Republicanism - Established by Mir-Hossein Mousavi, the Green Path of Hope is an Iranian Association that seeks a path towards democracy through peaceful means. Mousavi opted to choose 'Path' rather than 'Party' as parties had to be approved by the government, which Mousavi did not recognize as legitimate. The Green Path of Hope is a reformist movement, incorporating Republican and moderate Islamic ideals to form its core ideology."
 
  #Nationalist
- PER.Nat_Autocracy: "£GFX_PER_military_junta  Arteš-é Irān"
+ PER.Nat_Autocracy: "£PER_military_junta  Arteš-é Irān"
+ PER.Nat_Autocracy_icon: "£PER_military_junta"
  PER.Nat_Autocracy_desc: "Artesh-é Iran, or the Iranian Armed Forces was established in 550 B.C, with its most modern form being created in 1921 during the rise of the Pahlavi Dynasty. The Artesh remained mostly apolitical in Iranian affairs, in both the Pahlavi era, and Islamic Republics era. Throughout history, the Artesh has remained loyal to the government in power, but they have intervened in some instances in Iranian political history."
  PER.Nat_Fascism: "£PER_fascism Anjoman-é Pâdeshâhi"
+ PER.Nat_Fascism_icon: "£PER_fascism"
  PER.Nat_Fascism_desc: "Ultra-Nationalism - The Kingdom Assembly of Iran, also known as 'Tondâr' (Meaning Thunder in Persian) is an ultra-nationalist monarchist party. The group seeks the restoration of a monarchy, be it the Pahlavi's or a new one. The group is heavily against Islam, and the religion as a whole, and they view it as foreign and alien. They also strongly discriminate against Arabs, using the word 'Tâzi' to draw a distinction between Iranians and Arabs."
  PER.Nat_Populism: "£PER_Nat_Populism_small Hezb-é Pān-Irānist"
  PER.Nat_Populism_icon: "£PER_Nat_Populism_small"
  PER.Nat_Populism_desc: "Pan Iranism - The Pan Iranist Party emerged in 1952 to push for the unification of Iranic peoples, and the return of Irans territory lost over a period of humiliation and defeat in the 18th and 19th century. They strongly oppose the involvement of foreign powers in Iran and the region, and highly value national independence above all else."
  PER.nation_party: "£PER_Nat_Populism_small Hezb-é Mellat"
+ PER.nation_party_icon: "£PER_Nat_Populism_small"
  PER.nation_party_desc: "Iranian Nationalism - Hezb-e Mellat-e Iran, or the Nation Party, split from the Pan-Iranists in October of 1951, following a dispute between Pezekshapour and Forouhar. Forouhar wanted to push a more democratic agenda, whilst Pezekshapour wanted to push the party towards authoritarianism, which lead Forouhar to create the Nation Party."
- PER.Monarchist: "£PER_monarchism  Saltānāt-é Pāhlavi"
+ PER.Monarchist: "£PER_monarchism Saltānāt-é Pāhlavi"
  PER.Monarchist_icon: "£PER_monarchism"
  PER.Monarchist_desc: "Shahanshahi - The House of Pahlavi is often cited for its accomplishments in modernizing Iran, and setting the framework for modern Iranian nationalism. The House of Pahlavi saught to push its efforts for modernization by largely secularizing the country, which often put it at odds with the Islamists elements in the country."
  PER.Monarchist_highway: "£generic_Monarchist_small Saltanat-é Highway"
@@ -3746,11 +3754,11 @@
  RAJ.Neutral_conservatism: "£RAJ_conservatism Bharatiya Janata Party"
  RAJ.Neutral_conservatism_icon: "£RAJ_conservatism"
  RAJ.Neutral_conservatism_desc: ""
- RAJ.Neutral_Libertarian: "£GFX_RAJ_non_aligned_libertarian Swatantra Party"
- RAJ.Neutral_Libertarian_icon: "£GFX_RAJ_non_aligned_libertarian"
+ RAJ.Neutral_Libertarian: "£RAJ_non_aligned_libertarian Swatantra Party"
+ RAJ.Neutral_Libertarian_icon: "£RAJ_non_aligned_libertarian"
  RAJ.Neutral_Libertarian_desc: ""
- RAJ.Neutral_green: "£GFX_RAJ_non_aligned_greens Indian Greens"
- RAJ.Neutral_green_icon: "£GFX_RAJ_non_aligned_greens"
+ RAJ.Neutral_green: "£RAJ_non_aligned_greens Indian Greens"
+ RAJ.Neutral_green_icon: "£RAJ_non_aligned_greens"
  RAJ.Neutral_green_desc: ""
  RAJ.neutral_Social: "£RAJ_neutral_Social Samajwadi - AIADMK"
  RAJ.neutral_Social_icon: "£RAJ_neutral_Social"
@@ -3969,11 +3977,11 @@
  USA.nationalist_front: "£USA_nationalist_front The Nationalist Front Party"
  USA.nationalist_front_icon: "£USA_nationalist_front"
  USA.nationalist_front_desc: "The NFP is a coalition party of America's right winged thinkers, from the traditionalist to the alt-right it is a confusing back and forthing in true policy notions but most seem to agree on more restrictive immigration reforms, focusing more on domestic policies to rekindle the traditional family and a return to more traditional values in public institutions like schools have a pledge of allegence and being in line with more Christian values."
- USA.Nat_Fascism: "£GFX_USA_nazi_party American Nazi Party"
- USA.Nat_Fascism_icon: "£GFX_USA_nazi_party"
+ USA.Nat_Fascism: "£USA_nazi_party American Nazi Party"
+ USA.Nat_Fascism_icon: "£USA_nazi_party"
  USA.Nat_Fascism_desc: "Fasicst - The American Nazi Party is a white supremacist neo-nazi party. Though it has a long history, it has largely been without a popular following, having been disolved and set up again by seperate people amid infighting multiple times."
- USA.Naturalist_NFP_Victory: "£GFX_USA_american_heritage_party American Naturalist Party"
- USA.Naturalist_NFP_Victory_icon: "£GFX_USA_american_heritage_party"
+ USA.Naturalist_NFP_Victory: "£USA_american_heritage_party American Naturalist Party"
+ USA.Naturalist_NFP_Victory_icon: "£USA_american_heritage_party"
  USA.Naturalist_NFP_Victory_desc: "American Naturalist Party - The ANP is a pseudo coalition party in where the ultranationalist wing of the old NFP conformed into a united ideology. This comprises of the Natualist Movement, American Nazi Party, KKK remnants and a smattering of other groups and organizations. The main ideology is focused around American Naturalism which is a modern adaptation of the Liberian Plan. Since unwarranted murder is obviously frowned upon, government helped relocation abroad is how the party wants to focus its purity plan. Economics tends to be a form of State Capitalism/Authoritarin Socialism, but cause no one likes the \"Reds\", they just clean up the naming to make it work. Foreign Policy is moderate Expansionism with heavy Mercantile and Isolationist influences."
  USA.Nat_Autocracy: "£USA_Nat_Autocracy_small US Army"
  USA.Nat_Autocracy_icon: "£USA_Nat_Autocracy_small"
@@ -4325,43 +4333,43 @@
  AFG.conservatism_desc: ""
  AFG.liberalism: "£generic_liberalism_small Hezb-e Kongra Milli"
  AFG.liberalism_desc: ""
- AFG.liberalism_2017: "£GFX_AFG_liberalism_2017 Basej-e Milli"
+ AFG.liberalism_2017: "£AFG_liberalism_2017 Basej-e Milli"
  AFG.liberalism_2017_desc: ""
  AFG.socialism: "£generic_socialism_small Hezb-e Muttrqa-e Dimukratik"
  AFG.socialism_desc: ""
- AFG.Western_Autocracy: "£GFX_AFG_western_autocracy Afghan Independents"
+ AFG.Western_Autocracy: "£AFG_western_autocracy Afghan Independents"
  AFG.Western_Autocracy_desc: ""
- AFG.Communist-State: "£GFX_AFG_communist_state Hezb-e Komunist"
+ AFG.Communist-State: "£AFG_communist_state Hezb-e Komunist"
  AFG.Communist-State_desc: ""
- AFG.anarchist_communism: "£GFX_AFG_anarchist_communism Hezb-e Muttahed-e Melli"
+ AFG.anarchist_communism: "£AFG_anarchist_communism Hezb-e Muttahed-e Melli"
  AFG.anarchist_communism_desc: ""
- AFG.Conservative: "£GFX_AFG_conservative Junbish-i-Milli"
+ AFG.Conservative: "£AFG_conservative Junbish-i-Milli"
  AFG.Conservative_desc: ""
- AFG.Autocracy: "£GFX_AFG_autocracy Hezb-e Dimukratik-e Khalq"
+ AFG.Autocracy: "£AFG_autocracy Hezb-e Dimukratik-e Khalq"
  AFG.Autocracy_desc: ""
- AFG.Mod_Vilayat_e_Faqih: "£GFX_AFG_moderate_shiites Hezb-e Wahdat"
+ AFG.Mod_Vilayat_e_Faqih: "£AFG_moderate_shiites Hezb-e Wahdat"
  AFG.Mod_Vilayat_e_Faqih_desc: ""
- AFG.Vilayat_e_Faqih: "£GFX_AFG_hardline_shiites Harakat-e Islami"
+ AFG.Vilayat_e_Faqih: "£AFG_hardline_shiites Harakat-e Islami"
  AFG.Vilayat_e_Faqih_desc: ""
- AFG.Caliphate: "£GFX_AFG_salafist_jihadism Taliban"
+ AFG.Caliphate: "£AFG_salafist_jihadism Taliban"
  AFG.Caliphate_desc: ""
- AFG.Kingdom: "£GFX_AFG_kingdom Hezb-e Islami"
+ AFG.Kingdom: "£AFG_kingdom Hezb-e Islami"
  AFG.Kingdom_desc: ""
- AFG.neutral_Social: "£GFX_AFG_neutral_social Hezb-e Watan"
+ AFG.neutral_Social: "£AFG_neutral_social Hezb-e Watan"
  AFG.neutral_Social_desc: ""
- AFG.Neutral_Autocracy: "£GFX_AFG_neutral_autocracy Tanzim-e Dahwat-e Islami"
+ AFG.Neutral_Autocracy: "£AFG_neutral_autocracy Tanzim-e Dahwat-e Islami"
  AFG.Neutral_Autocracy_desc: ""
- AFG.Neutral_Muslim_Brotherhood: "£GFX_AFG_neutral_muslim_brotherhood Jamiat-e Islami"
+ AFG.Neutral_Muslim_Brotherhood: "£AFG_neutral_muslim_brotherhood Jamiat-e Islami"
  AFG.Neutral_Muslim_Brotherhood_desc: ""
- AFG.Neutral_conservatism: "£GFX_AFG_neutral_conservatism Etelaf-e Milli"
+ AFG.Neutral_conservatism: "£AFG_neutral_conservatism Etelaf-e Milli"
  AFG.Neutral_conservatism_desc: ""
- AFG.Neutral_Communism: "£GFX_AFG_neutral_communism Sazman-i Rihayi"
+ AFG.Neutral_Communism: "£AFG_neutral_communism Sazman-i Rihayi"
  AFG.Neutral_Communism_desc: ""
- AFG.Nat_Autocracy: "£GFX_AFG_nat_autocracy Afghan Armed Forces"
+ AFG.Nat_Autocracy: "£AFG_nat_autocracy Afghan Armed Forces"
  AFG.Nat_Autocracy_desc: ""
- AFG.Nat_Populism: "£GFX_AFG_nat_populism Mahaz-e Milli-ye Islami"
+ AFG.Nat_Populism: "£AFG_nat_populism Mahaz-e Milli-ye Islami"
  AFG.Nat_Populism_desc: ""
- AFG.Monarchist: "£GFX_AFG_monarchist Barakzai Dynasty"
+ AFG.Monarchist: "£AFG_monarchist Barakzai Dynasty"
  AFG.Monarchist_desc: ""
  AFR.Nat_Autocracy: "£generic_Nat_Autocracy_small Armed Forces Revolutionary Council"
  AFR.Nat_Autocracy_desc: ""
@@ -4378,7 +4386,7 @@
  AGL.Communist-State: "£AGL_emerging_left_wing_radical MPLA - Movimento Popular de Libertação de Angola (Hardline)"
  AGL.Communist-State_icon: "£AGL_emerging_left_wing_radical"
  AGL.Communist-State_desc: ""
- AGL.anarchist_communism: "£GFX_AGL_emerging_left_wing_radical MPLA - Movimento Popular de Libertação de Angola (Moderate)"
+ AGL.anarchist_communism: "£AGL_emerging_left_wing_radical MPLA - Movimento Popular de Libertação de Angola (Moderate)"
  AGL.anarchist_communism_icon: "£AGL_emerging_left_wing_radical"
  AGL.anarchist_communism_desc: ""
  AGL.Neutral_conservatism: "£generic_Neutral_conservatism_small FNLA - Frente Nacional de Libertação de Angola"
