--- a/Changelog.txt
+++ b/Changelog.txt
@@ -44,6 +44,7 @@ v1.10.1
   - Counter Terror "African/ME/Asia Influencer" now updates every time a recalculate is done
   - Fixed a display bug with the Ba'ath party for Iraq
   - Fixed an issue with the post war focuses for Iraq being unavailable if the U.S. collapsed
+  - Fixed an issue with Iraq continuously inviting France to their economic union
 
  Content:
   - The Communist Party of Cuba can now take the pro-LGBT policies
