Party ban trigger loc polishing

--- a/localisation/english/MD_subideology_parties_l_english.yml
+++ b/localisation/english/MD_subideology_parties_l_english.yml
@@ -236,30 +236,30 @@
  decrease_election_threshold: "§YDecrease Election Threshold§!"
  decrease_election_threshold_TT: "Election Threshold (or Electoral Threshold) is the minimum percentage a political party must achieve before they are considered a valid party for legislative representation.\n\n§YPrerequisites§!:\n[!decrease_election_threshold_click_enabled]\n§YEffects:§!\n[!decrease_election_threshold_click]\n\nThe change will apply at the next election, making it easier for small parties to get power."
 
- party1_banned: "Has banned [Western_Autocracy_L]"
- party2_banned: "Has banned [conservatism_L]"
- party3_banned: "Has banned [liberalism_L]"
- party4_banned: "Has banned [socialism_L]"
- party5_banned: "Has banned [Communist-State_L]"
- party6_banned: "Has banned [anarchist_communism_L]"
- party7_banned: "Has banned [Conservative_L]"
- party8_banned: "Has banned [Autocracy_L]"
- party9_banned: "Has banned [Mod_Vilayat_e_Faqih_L]"
- party10_banned: "Has banned [Vilayat_e_Faqih_L]"
- party11_banned: "Has banned [Kingdom_L]"
- party12_banned: "Has banned [Caliphate_L]"
- party13_banned: "Has banned [Neutral_Muslim_Brotherhood_L]"
- party14_banned: "Has banned [Neutral_Autocracy_L]"
- party15_banned: "Has banned [Neutral_conservatism_L]"
- party16_banned: "Has banned [oligarchism_L]"
- party17_banned: "Has banned [Neutral_Libertarian_L]"
- party18_banned: "Has banned [Neutral_green_L]"
- party19_banned: "Has banned [neutral_Social_L]"
- party20_banned: "Has banned [Neutral_Communism_L]"
- party21_banned: "Has banned [Nat_Populism_L]"
- party22_banned: "Has banned [Nat_Fascism_L]"
- party23_banned: "Has banned [Nat_Autocracy_L]"
- party24_banned: "Has banned [Monarchist_L]"
+ party1_banned: " Has banned §Y[Western_Autocracy_L]§!"
+ party2_banned: " Has banned §Y[conservatism_L]§!"
+ party3_banned: " Has banned §Y[liberalism_L]§!"
+ party4_banned: " Has banned §Y[socialism_L]§!"
+ party5_banned: " Has banned §Y[Communist-State_L]§!"
+ party6_banned: " Has banned §Y[anarchist_communism_L]§!"
+ party7_banned: " Has banned §Y[Conservative_L]§!"
+ party8_banned: " Has banned §Y[Autocracy_L]§!"
+ party9_banned: " Has banned §Y[Mod_Vilayat_e_Faqih_L]§!"
+ party10_banned: " Has banned §Y[Vilayat_e_Faqih_L]§!"
+ party11_banned: " Has banned §Y[Kingdom_L]§!"
+ party12_banned: " Has banned §Y[Caliphate_L]§!"
+ party13_banned: " Has banned §Y[Neutral_Muslim_Brotherhood_L]§!"
+ party14_banned: " Has banned §Y[Neutral_Autocracy_L]§!"
+ party15_banned: " Has banned §Y[Neutral_conservatism_L]§!"
+ party16_banned: " Has banned §Y[oligarchism_L]§!"
+ party17_banned: " Has banned §Y[Neutral_Libertarian_L]§!"
+ party18_banned: " Has banned §Y[Neutral_green_L]§!"
+ party19_banned: " Has banned §Y[neutral_Social_L]§!"
+ party20_banned: " Has banned §Y[Neutral_Communism_L]§!"
+ party21_banned: " Has banned §Y[Nat_Populism_L]§!"
+ party22_banned: " Has banned §Y[Nat_Fascism_L]§!"
+ party23_banned: " Has banned §Y[Nat_Autocracy_L]§!"
+ party24_banned: " Has banned §Y[Monarchist_L]§!"
  partyall_banned: "All parties are banned"
 
  ban_party_effect_tt: "Bans the [party_index_L]"
