--- a/localisation/english/MD_subideology_parties_l_english.yml
+++ b/localisation/english/MD_subideology_parties_l_english.yml
@@ -7308,7 +7308,7 @@
  PAL.Neutral_Autocracy_icon: "£PAL_non_aligned_autocracy"
  PAL.Neutral_Autocracy_desc: ""
  PAL.Neutral_conservatism: "£PAL_non_aligned_conservative Tanzim"
- PAL.Neutral_conservatism_icon: "£PAL_non_aligned_conservative Tanzim"
+ PAL.Neutral_conservatism_icon: "£PAL_non_aligned_conservative"
  PAL.Neutral_conservatism_desc: ""
  PAL.neutral_Social: "£PAL_neutral_Social Fatah"
  PAL.neutral_Social_icon: "£PAL_neutral_Social"
