--- a/localisation/simp_chinese/MD_decisions_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_decisions_l_simp_chinese.yml
@@ -822,16 +822,16 @@
  t14_152_decision: "生成T-14/152设计"
  t15_decision: "生成T-15设计"
  kurganets_decision: "生成库尔干-25设计"
- msta_decision: "生成2S33 姆斯塔河-SM2设计"
+ msta_decision: "生成2S33 姆斯塔-SM2设计"
  koalitsiya_decision: "生成2S35 联盟-SV设计"
  sprut_decision: "生成2S25 章鱼-SD设计"
  terminator_decision: "生成BMPT 终结者设计"
  abrams_decision: "生成M1A2 SEPv3 艾布拉姆斯设计"
  bradley_decision: "生成M2A3 布莱德利设计"
- booker_decision: "生成M10布克设计"
+ booker_decision: "生成M10 布克设计"
  new_paladin_decision: "生成M109A6 帕拉丁设计"
  m1128_decision: "生成M1128设计"
- type_99_decision: "生成99A式设计"
+ type_99_decision: "生成ZTZ-99A设计"
  plz_05_decision: "生成PLZ-05设计"
  lynx_decision: "生成山猫设计"
  type_10_decision: "生成10式设计"
