--- a/localisation/simp_chinese/MD_focus_CUB_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_CUB_l_simp_chinese.yml
@@ -1087,3 +1087,13 @@
  CUB_join_csto_desc: "一些俄罗斯消息来源已经开始传播我们加入集体安全条约组织的消息。好吧，一旦他们开始猜测，就没有必要再保密了。古巴是集体安全条约组织的一部分。"
  CUB_idea_tourist_industry: "古巴旅游业"
  CUB_idea_tourist_industry_desc: "我们应该鼓励人们到我们伟大的国家旅游。古巴有着丰富多彩的历史，鼓励人们到我们国家这一重要地区旅游是十分重要的。"
+ cuba.66.t: "古巴要求解除封锁"
+ cuba.66.d: "由于美古关系改善以及两国贸易往来，古巴政府请求解除禁运。"
+ cuba.66.a: "好的"
+ cuba.66.b: "不"
+ cuba.67.t: "美国已解除封锁"
+ cuba.67.d: "我们这个岛国终于可以安居乐业了。"
+ cuba.67.a: "太棒了！"
+ cuba.68.t: "美国拒绝"
+ cuba.68.d: "封锁仍在继续……"
+ cuba.68.a: "哦，不.."
