--- a/localisation/simp_chinese/MD_focus_GER_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_GER_l_simp_chinese.yml
@@ -2087,8 +2087,8 @@
  GER_war_debt_TT: "$§R0.731§!来自§Y战争赔偿§!\n"
  GER_war_debt_contributions_TT: "每周支付§R$0.731§!§YB§!§Y战争赔偿§!。\n"
  GER_state_nuclear_power_plants_tt: "至少有§Y2级§!核反应堆。"
- GER_russian_relations_harmed_tt: "\n§Y这可能会在未来会§t伤害§!我们与§7[SOV.GetNameWithFlag]§!的关系§！。§!"
- GER_usa_relations_harmed_tt: "\n§Y这可能会在未来会§t伤害§!我们与§2[USA.GetNameWithFlag]]§!的关系§！。§!"
+ GER_russian_relations_harmed_tt: "\n§Y这可能会在未来会§t伤害§!我们与§7[SOV.GetNameWithFlag]§!的关系。§!"
+ GER_usa_relations_harmed_tt: "\n§Y这可能会在未来会§t伤害§!我们与§2[USA.GetNameWithFlag]§!的关系。§!"
  GER_healthcentres_construction_tt: "一旦医疗中心建成，我们的§§Y卫生部门的支出§!将会§G减少§!。"
  GER_man_satisfaction_increase_tt: "§G增加§!§H晨勃§!的几率"
  GER_industrial_conglomerates_slightly_positive_TT: "工业集团意见至少§Y50§!或更高"
