--- a/localisation/simp_chinese/MD_focus_HKG_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_HKG_l_simp_chinese.yml
@@ -1,5 +1,5 @@
 ﻿l_simp_chinese:
- hong_kong_focus: "香港焦点树"
+ hong_kong_focus: "香港国策树"
  HKG_combat_vested_interests: "打击既得利益者"
  HKG_combat_vested_interests_desc: "新年已至，万象更新。千禧年的到来，为香港带来了新的未来。"
  HKG_take_on_heung_ye_kuk: "挑战乡议局"
@@ -339,15 +339,15 @@
  HKG_idea_chinese_based_education_reform: "中文教育课程改革"
  HKG_idea_chinese_based_education_reform_desc: "香港所有学校都必须用中文教学，我们的孩子必须会说中文。"
  HKG_idea_railway_development_strategy_2000: "2000年铁路发展战略"
- legco_pro_beijing_camp_desc: "§C亲建制派阵营§!\n £HKG_Conservative 民主建港协进联盟\n£HKG_Autocracy 新民党\n£HKG_anarchist_communism 香港工会联合会\n£HKG_Neutral_conservatism 民主思路\n£HK_Liberal_Party 自由党\n£generic_Neutral_Libertarian_small 新思维\n"
- legco_pan_democracy_camp_desc: "§8亲民主派阵营§!\n £HK_Demosisto 香港众志\n£HKG_conservatism 民主党\n[legco_HKG_liberalism]\n[legco_HKG_socialism]\n£HKG_Neutral_Autocracy 民主联盟\n£HK_Green 香港绿党\n"
- legco_localist_camp_desc: "§G本土派阵营§! \n£HK_Indigenous 本土民主前线\n£HK_National 香港民族党\n£HK_People_Power 人民力量\n£HK_Conservative_Alt_New 保守党"
+ legco_pro_beijing_camp_desc: "§C亲建制派阵营§!：\n £HKG_Conservative 民主建港协进联盟\n £HKG_Autocracy 新民党\n £HKG_anarchist_communism 香港工会联合会\n £HKG_Neutral_conservatism 民主思路\n £HK_Liberal_Party 自由党\n £generic_Neutral_Libertarian_small 新思维\n"
+ legco_pan_democracy_camp_desc: "§8亲民主派阵营§!：\n £HK_Demosisto 香港众志\n £HKG_conservatism 民主党\n [legco_HKG_liberalism]\n [legco_HKG_socialism]\n £HKG_Neutral_Autocracy 民主联盟\n £HK_Green 香港绿党\n"
+ legco_localist_camp_desc: "§G本土派阵营§! ：\n £HK_Indigenous 本土民主前线\n £HK_National 香港民族党\n £HK_People_Power 人民力量\n £HK_Conservative_Alt_New 保守党"
  legco_motion_vote_supports_tt: "§C亲建制派阵营§!支持率：[?legco_PE_temp_support|2%](§C[?legco_PE_support|0]]/[?legco_PE_seats|0]§!)\n§8亲民主派阵营§!支持率：[?legco_PD_temp_support|2%](§8[?legco_PD_support|0]/[?legco_PD_seats|0]§!)\n§G本土派阵营§!支持率：[?legco_LC_temp_support|2%](§G[?legco_LC_support|0]/[?legco_LC_seats|0]§!)"
  legco_motion_title: "当前动议："
  legco_motion_effect: "[ROOT.legco_motion_effect]"
  legco_require_votes: "你需要至少§Y[?legco_required_seats|0]§G批准§!席位§!才能通过此动议。"
  legco_funding_XRL_tt: "注资§3广深港高速铁路香港段§!"
- legco_approve_funding_for_XRL_focus_tt: "§Y注资§!§3广深港高速铁路香港段§!将在§Y立法会§!表决。"
+ legco_approve_funding_for_XRL_focus_tt: "§3广深港高速铁路香港段§!§Y预算§!将在§Y立法会§!表决。"
  legco_effect_railway_development_strategy_2000_tt: "增加§Y2000年铁路发展战略§!，这就"
  legco_effect_approve_funding_for_XRL_tt: "[HKG.GetFlag]香港§Y国库§!：$-0.25B\n§Y香港§!境内增加§G1§! §Y铁路§!。\n([CHI.GetFlag]中华人民共和国)[CHI.GetFlag]中国§Y国库§!: $-0.75B\n§Y珠江三角洲§!：\n 增加§G3§!§Y铁路§!。"
  legco_test_text: "<尚未实装>"
@@ -356,16 +356,16 @@
  hongkong_news.4.a: "这是一个好消息，不是吗？"
  hongkong_news.4.b: "嗯...明白了。"
  hongkong_news.5.t: "SARS在香港爆发"
- hongkong_news.5.d: "中华民国大陆"
+ hongkong_news.5.d: "中国大陆"
  hongkong_news.5.a: "哦，该死"
  legco_clock_trigger_tt: "当前有一个动议即将表决。"
  legco_decision_effect_tt: "如果§G批准席位§!多于§Y法定席位§!(§G[?legco_approval_seats]§! > §Y[?legco_required_seats]§!)："
  legco_electoral_reform_forward_tt: "行政长官及立法会选举建议"
  legco_co_location_bill_tt: "一地两检法案"
- legco_effect_electoral_reform_tt: "该动议结果取决于§Y大陆政府的选择§!。"
+ legco_effect_electoral_reform_tt: "该动议结果取决于§Y内地政府的选择§!。"
  legco_election_reform_a_effect_tt: "§Y效果：§!\n §O维持现状§!\n§R这可能会引起一些人不满。§!"
- legco_election_reform_b_effect_tt: "§Y效果：§!\n§L选举委员会§!§Y选举专员§!数目将§G增加§!§Y800§!.\n§Y立法会§!席位将§G增加§!§Y10§!\n §g不会制定“普选时间表”。§!\n§Y这可能会引起一些人不满。§!"
- legco_election_reform_c_effect_tt: "§Y效果：§!\n下一届选举将会是§4普选制§!.\n§Y立法会§! 席位将§G增加§!§Y30§!.\n §Y废除§! §4\"功能界别\"§!"
+ legco_election_reform_b_effect_tt: "§Y效果：§!\n §L选举委员会§!§Y选举专员§!数目将§G增加§!§Y800§!.\n §Y立法会§!席位将§G增加§!§Y10§!\n §g不会制定“普选时间表”。§!\n §Y这可能会引起一些人不满。§!"
+ legco_election_reform_c_effect_tt: "§Y效果：§!\n 下一届选举将会实行§4普选制§!.\n §Y立法会§! 席位将§G增加§!§Y30§!.\n §Y废除§! §4\"功能界别\"§!"
  hongkong.10.t: "香港政府要求我们回答下届选举是否能实现普选。"
  hongkong.10.d: "根据香港基本法，香港首两届行政长官和首三届立法会​​均由选举委员会提名和选举产生，并非普选产生。2007年行政长官选举和2008年立法会选举将是决定香港是否应改革民主制度，让香港最终实现普选目标的契机。"
  hongkong.10.a: "香港的选举制度将维持现状。"
