--- a/localisation/simp_chinese/MD_focus_PER_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_PER_l_simp_chinese.yml
@@ -5480,8 +5480,6 @@
  PER_ignite_syrian_civilwar: "将武装[FSA.GetFlag]§H叙利亚自由军§!并且引发§H叙利亚内战§!"
  PER_reduce_corruption_by_2: "将降低§H2级§!§H腐败度§!"
  PER_effect_special_circumstance: "该国策在§H革命§!之后将显现效果"
- Cat_MR_FIGHTER: "多用途战斗机"
- Cat_satellite: "卫星"
  PER_100_productivity_in_each_state: "将在每个§H核心省份§!提高§H100§!§H生产率§!"
  PER_USA_will_invest: "[USA.GetFlag]§H[USA.GetName]§!将开始投资§H[PER.GetName]§!"
  PER_RAJ_will_invest: "[RAJ.GetFlag]§H[RAJ.GetName]§!将开始投资§H[PER.GetName]§!"
@@ -5506,6 +5504,6 @@
  PER_attack_irgc_south_khorasan_1: "在南呼罗珊攻击伊斯兰革命卫队"
  PER_attack_irgc_razavi_khorasan_1: "在礼萨呼罗珊攻击伊斯兰革命卫队"
  PER_high_inbreeding: "脸皮厚，血脉更浓"
- PER_high_inbreeding_desc: "‘§H家事不出门§!’\n既然可以走到走廊上做爱，为什么还要走到街上呢？在拉什特，家庭闹剧比千禧黎明的俄罗斯国策树还要复杂！我叔叔过去常说，女人就像咖啡，又热又湿，就像我的奶奶一样。"
+ PER_high_inbreeding_desc: "‘§H家事不出门§!’\n既然可以在客厅里敦伦，为什么还要去街上搞呢？在拉什特，家庭闹剧比千禧黎明的俄罗斯国策树还要复杂！我叔叔过去常说，女人就像咖啡，又热又湿，就像我的奶奶一样。"
  PER_incompetant_joint_chiefs_of_staff: "参谋长联席会议无能"
  PER_incompetant_joint_chiefs_of_staff_desc: "伊朗第二次革命后，伊朗军队及其参谋长联席会议的无能暴露无遗。这有几个原因，其中之一就是伊朗军队被分成两支部队。领导能力的缺乏和明显的无能给指挥结构带来了巨大压力，并将使任何类型的行动都成为一场后勤噩梦。\n§W--------------§!\n如果我们完成§H战争大学§!国策，该国家精神将被§R移除§!"
