--- a/localisation/simp_chinese/MD_focus_SER_VOJ_MNT_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_SER_VOJ_MNT_l_simp_chinese.yml
@@ -2023,3 +2023,6 @@
  ser_invest.7.d: "[FROM.GetNamewithFlag]政府已同意在我国投资！这将加速我们经济的增长！"
  ser_invest.7.a: "很好"
  CAT_utility_vehicle: "通用载具"
+ Serbia.27.t: "巴尔干联邦"
+ Serbia.27.d: "我们已正式成为巴尔干联邦的成员。"
+ Serbia.27.a: "很好"
