--- a/localisation/simp_chinese/MD_subparty_policies_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_subparty_policies_l_simp_chinese.yml
@@ -6,7 +6,6 @@
  generic_focus_on_civilian_sector: "专注于民用领域"
  generic_focus_on_civilian_sector_desc: "应该把最大的精力花在制造基本消费品、电器和公用事业上，为我们的人民造福。如果我们扩大我们的港口，我们也可以把我们的产品卖给那些肮脏的资本家，偷走那些帝国主义者的钱。"
  generic_focus_on_military_infrastructure: "专注于军事基础设施"
- generic_focus_on_military_infrastructure_desc: "为工人而战是一场永恒的战争。我们随时可能被资本主义猪猡入侵，我们需要为我们的国家做好准备，使我们的军事行动发挥最大效力。"
  generic_focus_on_military_production: "专注于军备生产"
  generic_focus_on_military_production_desc: "工厂的工人和劳动者没有武器就不能战斗！我们需要建立更多的军工厂，使每个爱国公民都能与我们的敌人作战。"
  generic_focus_on_naval_expansion: "专注于海军建设"
@@ -183,3 +182,4 @@
  IP_fundamentalist_international_pariah_delayed: "§L极端可能具有挑战性，因为很难找到愿意与我们进行贸易的国家。也许人们只是对“神权政治是激进的”这句话的理解与我们不同？§!"
  IP_monarch_name_monarch: "君主主义"
  IP_monarch_name_current_leader: "[ROOT.GetLeader]"
+ generic_focus_on_military_infrastructure_desc: "为工人而战是一场永恒的战争。我们随时可能被资本主义猪入侵，我们需要让我们的国家做好准备，最大限度地发挥我们军事行动的效力。"
