--- a/localisation/simp_chinese/equipment_l_simp_chinese.yml
+++ b/localisation/simp_chinese/equipment_l_simp_chinese.yml
@@ -970,9 +970,9 @@
  CAN_APC_4:0 "LAV-III 野牛"
  CAN_APC_4_desc:0 "剩余的LAV陶式导弹装甲发射车配备了纳努克远程控制武器站，可充当步兵分队运输车。"
  CAN_APC_4_short:0 "LAV-III 野牛"
- CAN_APC_5:0 "M1126 斯特赖克 ICV"
+ CAN_APC_5:0 "LAV-6 ACSV"
  CAN_APC_5_desc:0 "LAV III最终升级至LAV 6.0标准，同时保持更高的车顶基线，适合步兵或货物运输。升级增强了保护，包括更好的电子设备、简易爆炸装置保护和附加装甲，同时保留了配备机枪的保护者远程控制武器站。"
- CAN_APC_5_short:0 "M1126 斯特赖克 ICV"
+ CAN_APC_5_short:0 "LAV-6 ACSV"
  CAN_ENGI_MBT_1:0 "装甲救援车 1"
  CAN_ENGI_MBT_1_short:0 "装甲救援车 1"
  CAN_ENGI_MBT_2:0 "装甲救援车 2"
@@ -2113,7 +2113,7 @@
  ENG_SP_Anti_Air_0: "神枪酋长"
  ENG_SP_Anti_Air_1: "轻剑"
  ENG_SP_Anti_Air_2: "星光"
- ENG_SP_Anti_Air_3: "M1127 斯特赖克 钢弩"
+ ENG_SP_Anti_Air_3: "M1127 斯崔克 钢弩"
  ENG_SP_Anti_Air_4: "蝎式 SRLS"
  ENG_artillery_0: "1965型火炮"
  ENG_artillery_1: "L118 轻型野战炮"
@@ -2210,7 +2210,7 @@
  ISR_SP_Anti_Air_1: "AN/TWQ-1 复仇者"
  ISR_SP_Anti_Air_2: "SPYDER防空导弹"
  ISR_SP_Anti_Air_2_short: "SPYDER防空导弹"
- ISR_SP_Anti_Air_3: "M1127IA 斯特赖克"
+ ISR_SP_Anti_Air_3: "M1127IA 斯崔克"
  ISR_SP_Anti_Air_4: "蝎式 SRLS-I"
  ISR_util_vehicle_0: "AIL 阿比尔"
  ISR_util_vehicle_0_short: "阿比尔"
@@ -2642,7 +2642,7 @@
  KOR_SP_Anti_Air_1_short: "K30 飞虎 自行高射炮"
  KOR_SP_Anti_Air_2: "天马 K-SAM"
  KOR_SP_Anti_Air_2_short: "天马 K-SAM"
- KOR_SP_Anti_Air_3: "M1127 斯特赖克 钢弩"
+ KOR_SP_Anti_Air_3: "M1127 斯崔克 钢弩"
  KOR_SP_Anti_Air_4: "蝎式 SRLS"
  KOR_util_vehicle_0: "KM111 吉普"
  KOR_util_vehicle_0_short: "KM111 吉普"
@@ -4166,9 +4166,9 @@
  USA_APC_4: "LAV25A1"
  USA_APC_4_desc: "这些新型轮式装甲车辆比早期型号提供了更多的保护，特别是在IED威胁的情况下。同样令人印象深刻的是这个平台包含的一系列特性；一种激光指示器、激光测距仪、全球定位系统、无线电和计算机，它们获取目标位置数据并将其传送给远处的炮兵部队或头顶上的轰炸机"
  USA_APC_4_short: "LAV25A1"
- USA_APC_5: "M1126 斯特赖克 ICV"
+ USA_APC_5: "M1126 斯崔克 ICV"
  USA_APC_5_desc: "实际上，“斯特赖克”号源自我们的加拿大邻居，满足了海军陆战队的需要，还包括自动灭火系统、CBRN系统、昼/夜热成像以及下一代机载通信系统。"
- USA_APC_5_short: "M1126 斯特赖克 ICV"
+ USA_APC_5_short: "M1126 斯崔克 ICV"
  USA_APC_6: "M1127A2"
  USA_APC_6_short: "M1127A2"
  USA_APC_7: "LAV30"
@@ -4225,31 +4225,31 @@
  USA_mbt_equipment_3: "M1202"
  USA_mbt_equipment_4: "M11"
  USA_ifv_equipment_0: "AIFV"
- USA_ifv_equipment_1: "斯特赖克"
+ USA_ifv_equipment_1: "斯崔克"
  USA_ifv_equipment_2: "布莱德利"
  USA_ifv_equipment_3: "施瓦茨科普夫"
  USA_ifv_equipment_4: "米利"
  USA_apc_equipment_0: "M113"
  USA_apc_equipment_1: "LAV-300"
- USA_apc_equipment_2: "斯特赖克"
+ USA_apc_equipment_2: "斯崔克"
  USA_apc_equipment_3: "马歇尔"
  USA_apc_equipment_4: "雷尼"
  USA_Rec_tank_0: "M551"
  USA_Rec_tank_0_short: "M551"
  USA_Rec_tank_1: "M551A1 谢里登"
  USA_Rec_tank_1_short: "M551A1 谢里登"
- USA_Rec_tank_2: "M1128 斯特赖克 MGS"
- USA_Rec_tank_2_short: "M1128 斯特赖克 MGS"
+ USA_Rec_tank_2: "M1128 斯崔克 MGS"
+ USA_Rec_tank_2_short: "M1128 斯崔克 MGS"
  USA_Rec_tank_3: "M1129"
  USA_Rec_tank_3_short: "M1129"
- USA_Rec_tank_4: "M10布克"
+ USA_Rec_tank_4: "M10 布克"
  USA_Rec_tank_4_short: "M10布克"
  USA_Rec_tank_5: "M7A2"
  USA_Rec_tank_5_short: "M7A2"
  USA_SP_Anti_Air_0: "M163 VADS"
  USA_SP_Anti_Air_1: "AN/TWQ-1 复仇者"
- USA_SP_Anti_Air_2: "M1127 斯特赖克 MSL"
- USA_SP_Anti_Air_3: "M1127 斯特赖克 钢弩"
+ USA_SP_Anti_Air_2: "M1127 斯崔克 MSL"
+ USA_SP_Anti_Air_3: "M1127 斯崔克 钢弩"
  USA_SP_Anti_Air_4: "蝎式 SRLS"
  USA_SP_R_arty_1: "M270 多管火箭系统"
  USA_SP_R_arty_2: "M142高机动型火箭炮"
@@ -9038,9 +9038,9 @@
  PMR_Rec_tank_0: "PT-76"
  PMR_Rec_tank_0_desc: "这种超快的两栖轻型坦克可以从河对岸偷袭敌人的阵地，并以它的76.2mm D-56T线膛炮投射地狱般的火力。"
  PMR_Rec_tank_0_short: "PT-76"
- PMR_Rec_tank_1: "2S25 章鱼-自行反坦克炮"
+ PMR_Rec_tank_1: "2S25 章鱼-SD"
  PMR_Rec_tank_1_desc: "这是一种自行两栖坦克歼击车，它可以悄悄靠近敌人的坦克并发射T-72-80携带的125mm炮弹。"
- PMR_Rec_tank_1_short: "2S25 章鱼-自行反坦克炮"
+ PMR_Rec_tank_1_short: "2S25 章鱼-SD"
  PMR_SP_Anti_Air_0: "ZSU-23-4石勒喀河自行高射炮"
  PMR_SP_Anti_Air_1: "9K35 箭-10地对空导弹系统"
  PMR_SP_Anti_Air_2: "SA-19 通古斯卡自行高射炮"
