--- a/localisation/simp_chinese/replace/replaced_from_vanilla_modifiers_l_simp_chinese.yml
+++ b/localisation/simp_chinese/replace/replaced_from_vanilla_modifiers_l_simp_chinese.yml
@@ -2059,11 +2059,6 @@
  chromium_export_multiplier_modifier: "£resource_export_multiplier_modifier_texticon §Y贵金属出口收入§!乘数"
  rubber_export_multiplier_modifier: "£resource_export_multiplier_modifier_texticon §Y橡胶出口收入§!乘数"
  agriculture_tax_modifier: "£corporate_tax_income_multiplier_modifier_texticon §Y农业§!税收乘数"
- Cat_GENES_research: "£research_bonus_texticon 遗传学研究速度"
- Cat_AI_research: "£research_bonus_texticon 人工智能技术"
- Cat_NFIBERS_research: "£research_bonus_texticon 纳米纤维技术"
- Cat_3D_research: "£research_bonus_texticon 3D打印技术"
- Cat_satellite_research: "£research_bonus_texticon 卫星技术"
  MODIFIER_VISIBLE_END: "最低能见度"
  MODIFIER_WEATHER: "天气修正($WEA$)："
  MODIFIER_NIGHT: "夜战修正："
@@ -2151,3 +2146,14 @@
  foreign_influence_monthly_domestic_independence_gain_factor: "£foreign_influence_modifier_texticon 每月§Y国家独立性§!获取系数"
  international_market_income_modifier: "£tax_gain_multiplier_modifier_texticon §Y国际市场收入§!修正"
  international_market_purchase_modifier: "£tax_gain_multiplier_modifier_texticon §Y国际市场采购§!修正"
+ CAT_support_weapons: "£research_bonus_texticon 支援武器"
+ CAT_inf_wep: "£research_bonus_texticon 步兵武器"
+ CAT_naval_eqp: "£research_bonus_texticon 海军装备"
+ CAT_bm: "£research_bonus_texticon 弹道导弹"
+ CAT_3d_research: "3D打印技术"
+ CAT_internet_tech_research: "互联网技术"
+ CAT_computing_tech_research: "计算机技术"
+ CAT_genes: "£research_bonus_texticon 遗传学研究速度"
+ CAT_ai_research: "£research_bonus_texticon 人工智能技术"
+ CAT_3d: "£research_bonus_texticon 3D打印技术"
+ CAT_satellite: "£research_bonus_texticon 卫星技术"
