--- a/localisation/simp_chinese/MD_africa_events_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_africa_events_l_simp_chinese.yml
@@ -110,7 +110,7 @@
  ivory_coast_md.14.b: "让它们咩咩叫去吧"
  ivory_coast_md.15.t: "第二次科特迪瓦内战胜利者"
  ivory_coast_md.15.d: "第二次科特迪瓦内战终于如期结束。随着战斗逐渐平息，该地区的军事力量已开始从积极冲突转向维和行动。人们低声交谈，我们曾经的敌人要么被赶出该国，要么正在等待。然而，随着我们开始向和平时期的政府过渡，我们迎来了新的一天。我们的时代将迎来和平，[CDI.GetLeader] 将带领我们前进。"
- ivory_coast_md.15.a: "胜利者获得战利品"
+ ivory_coast_md.15.a: "胜利者拥有战利品"
  ivory_coast_md.100.t: "科特迪瓦的混乱"
  ivory_coast_md.100.d: "科特迪瓦要求民主改革的抗议活动遭到警方和军队的强力镇压。局势依然紧张。如果不采取措施，科特迪瓦可能很快陷入内战。"
  ivory_coast_md.100.o1: "希望情况能够有所改善。"
@@ -252,7 +252,7 @@
  central_africa.16.b: "法国拒绝"
  central_africa.17.t: "中非丛林战争结束"
  central_africa.17.d: "中非共和国的小规模冲突已自然结束。战斗现已平息，只在公路沿线和靠近居民家附近的小村庄和其他小区域团体中发生。这是一场短暂的战争，但损失惨重，我们本已动荡的国家人民流离失所。时间将告诉我们中非丛林战争的真正后果是什么。"
- central_africa.17.a: "胜利者获得战利品"
+ central_africa.17.a: "胜利者拥有战利品"
  central_africa.18.t: "紧张的和平……"
  central_africa.18.d: "随着和平成为我们国家每个人的必需品，中非丛林战争已经开始逐渐平息。国家的和平不是安全的和平，但它仍然是和平。只有时间才能告诉我们这种和平能持续多久。毕竟，战争永远不会改变。"
  central_africa.18.a: "我们时代的和平"
@@ -282,7 +282,7 @@
  central_africa.24.a: "新总统"
  central_africa.25.t: "中非共和国内战结束"
  central_africa.25.d: "中非共和国内战已自然结束。随着我们控制了主要城市和城镇，巩固了对整个国家的控制，交战派系之间的战斗已基本平息。显然，我们已成为共和国的既定力量。"
- central_africa.25.a: "给胜利者的战利品"
+ central_africa.25.a: "胜利者拥有战利品"
  central_africa.26.t: "战争的下一阶段"
  central_africa.26.d: "[CAR.GetLeader]以及来自各个反叛组织的侵犯行为指控已开始将紧张局势升级到全面战斗的地步。前塞雷卡士兵已脱离军队，现在公开与反巴拉卡组织作战。反巴拉卡组织指责前塞雷卡组织对战斗负责，[LOG.GetLeader]已宣布在该国东北部建立自己的个人酋长国。由于战争的祸害继续困扰着我们的国家，这个国家再次陷入混乱。"
  central_africa.26.a: "对抗叛军！"
@@ -420,7 +420,7 @@
  mali.32.a: "真是不幸"
  mali.33.t: "马里内战的胜利者"
  mali.33.d: "马里内战终于结束了。政府、图阿雷格人和激进伊斯兰叛乱分子之间的战斗逐渐平息。我们已开始重建工作，重建法治，并占领了所有战乱地区。马里的冲突终于结束了。"
- mali.33.a: "给胜利者的战利品"
+ mali.33.a: "胜利者拥有战利品"
  somalia.1.t: "过渡时期民族政府的建立"
  somalia.1.d: "[SOM.GetName]、[SNA.GetName] 和其他索马里军阀已开始前往[DJI.GetName]讨论结束索马里内战的这一阶段。随着各领导人试图阻止其部队进一步发生冲突，尘埃开始落定。《过渡民族宪章》已让位于过渡时期民族政府的组建，这将带领我们走向未来。"
  somalia.1.a: "成立过渡时期民族政府"
@@ -583,7 +583,7 @@
  central_africa.1004.a: "和平终临……"
  mali.34.t: "图阿雷格叛乱的胜利者"
  mali.34.d: "图阿雷格人的叛乱自然落幕，政府与图阿雷格叛军之间的战斗基本结束，橄榄枝伸出，新现状得以恢复，年轻的马里国家又谱写了新的历史篇章。"
- mali.34.a: "给胜利者的战利品"
+ mali.34.a: "胜利者拥有战利品"
  mali.1000.t: "2006年图阿雷格叛乱"
  mali.1000.d: "马里和[MAL.GetLeader]最近拒绝了[ALG.GetLeader]和阿尔及利亚政府外交官提出的和平协议。和平谈判失败后，图阿雷格部队立即开始集结并准备战斗，准备从基达尔大规模入侵。忠于马里政府的当地部队与集结的部队进行了反击，试图为马里军队争取时间。马里战争已经开始。"
  mali.1000.a: "廷巴克图的麻烦......"
