--- a/localisation/simp_chinese/MD_focus_ITA_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_ITA_l_simp_chinese.yml
@@ -493,11 +493,6 @@
  ITA_further_protect_workers_rights_decision: "保障工人权利"
  ITA_further_protect_workers_rights_decision_desc: "无限期合同的工人已经是意大利最受保护的类别，但他们仍然是最大的选民群体和退休人员，因此安抚他们是确保我们的支持率保持高位的一种简单的赢得选票的策略。"
  ITA_further_protect_workers_rights_decision_repeal: "取消新的工人权益"
- ITA_modify_article_18: "修改宪法第十八条"
- ITA_modify_article_18_desc: "《工人法规》第18条规定了解雇员工的条件，使得雇主极难解雇员工，这对我们的就业市场造成了负面影响。修改该条款肯定会引起反对派对“强迫劳动”和“奴役”等指控，但实际上这只是常识。"
- ITA_modify_article_18_decision: "修改宪法第十八条"
- ITA_modify_article_18_decision_desc: "《工人法规》第18条规定了解雇员工的条件，使得雇主极难解雇员工，这对我们的就业市场造成了负面影响。修改该条款肯定会引起反对派对“强迫劳动”和“奴役”等指控，但实际上这只是常识。"
- ITA_modify_article_18_decision_repeal: "撤回《工人法规》第18条的修改。"
  ITA_save_struggling_companies: "拯救陷入困局的公司"
  ITA_save_struggling_companies_desc: "确保不具竞争力的公司生存并不简单，但当选举来临时，工人和工会肯定会记得是谁拯救了他们的工作。"
  ITA_save_struggling_companies_decision: "拯救陷入困境的公司"
@@ -1855,55 +1850,6 @@
  ITA_specialize_semovente_spirit_loc_2: "§Y自行火炮§! 生产花费：§R+15%§!\n§Y自行火炮§! 对人员杀伤：§G+30%§!"
  ITA_specialize_logistics_spirit_loc_1: "§Y运输机§!生产花费：§G-10%§!\n§Y运输直升机§!生产花费：§G-10%§!"
  ITA_specialize_logistics_spirit_loc_2: "§Y民用火车§!生产花费：§G-10%§!\n§Y通用载具§!生产花费：§G-10%§!"
- modify_additional_expenses_effect_TT: "这将修改我们的每周开支：[?additional_expenses_change|-]B\n"
- modify_nimby_modifier_effect_TT: "这将改变邻避综合征的效果：[?nimby_culture_change|%+]\n"
- modify_tax_gain_multiplier_modifier_effect_TT: "§Y税收收入乘数§!：[?ITA_tax_gain_multiplier_modifier_change|%+]\n"
- modify_interest_rate_multiplier_modifier_effect_TT: "§Y利率§!：[?ITA_interest_rate_multiplier_modifier_change|-]%\n"
- modify_bureaucracy_cost_multiplier_modifier_effect_TT: "§Y官僚体系花费§!：[?ITA_bureaucracy_cost_multiplier_modifier_change|%-]\n"
- modify_police_cost_multiplier_modifier_effect_TT: "§Y安全开支花费§!：[?ITA_police_cost_multiplier_modifier_change|%-]\n"
- modify_education_cost_multiplier_modifier_effect_TT: "§Y教育花费§!：[?ITA_education_cost_multiplier_modifier_change|%-]\n"
- modify_health_cost_multiplier_modifier_effect_TT: "§Y医保开支§!：[?ITA_health_cost_multiplier_modifier_change|%-]\n"
- modify_social_cost_multiplier_modifier_effect_TT: "§Y社会开支§!：[?ITA_social_cost_multiplier_modifier_change|%-]\n"
- modify_army_personnel_cost_multiplier_modifier_effect_TT: "§Y陆军开支§!：[?ITA_army_personnel_cost_multiplier_modifier_change|%-]\n"
- modify_navy_personnel_cost_multiplier_modifier_effect_TT: "§Y海军开支§!：[?ITA_navy_personnel_cost_multiplier_modifier_change|%-]\n"
- modify_airforce_personnel_cost_multiplier_modifier_effect_TT: "§Y空军开支§!：[?ITA_airforce_personnel_cost_multiplier_modifier_change|%-]\n"
- modify_equipment_cost_multiplier_modifier_effect_TT: "§Y陆军装备花费§!：[?ITA_equipment_cost_multiplier_modifier_change|%-]\n"
- modify_global_building_slots_factor_effect_TT: "§Y地区最大工业值§!：[?ITA_global_building_slots_factor_change|%+]\n"
- modify_MONTHLY_POPULATION_effect_TT: "§Y月度人力§!：[?ITA_MONTHLY_POPULATION_change|%+]\n"
- modify_production_speed_buildings_factor_effect_TT: "§Y建造速度§!：[?ITA_production_speed_buildings_factor_change|%+]\n"
- modify_stability_factor_effect_TT: "§Y稳定度§!：[?ITA_stability_factor_change|%+]\n"
- modify_stability_weekly_effect_TT: "§Y每周稳定度§!：[?ITA_stability_weekly_change|%+]\n"
- modify_research_speed_factor_effect_TT: "§Y研究速度§!：[?ITA_research_speed_factor_change|%+]\n"
- modify_army_org_regain_effect_TT: "§Y军队组织度恢复§!：[?ITA_army_org_regain_change|%+]\n"
- modify_army_org_Factor_effect_TT: "§Y陆军组织度§!: [?ITA_army_org_Factor_change|%+]\n"
- modify_repair_speed_factor_effect_TT: "§Y海军维修速度§!: [?ITA_repair_speed_factor_change|%+]\n"
- modify_refit_speed_effect_TT: "§Y海军改装速度§!：[?ITA_refit_speed_change|%+]\n"
- modify_positioning_effect_TT: "§Y阵位§!: [?ITA_positioning_change|%+]\n"
- modify_screening_without_screens_effect_TT: "§Y无屏卫舰时屏卫§!：[?ITA_screening_without_screens_change|%+]\n"
- modify_org_loss_when_moving_effect_TT: "§Y移动中组织度损失§!：[?ITA_org_loss_when_moving_change|%-]\n"
- modify_army_attack_factor_effect_TT: "§Y陆军攻击 §!: [?ITA_army_attack_factor_change|%+]\n"
- modify_army_defence_factor_effect_TT: "§Y陆军防御§!: [?ITA_army_defence_factor_change|%+]\n"
- modify_training_time_factor_effect_TT: "§Y军队训练时间§!: [?ITA_training_time_factor_change|%-]\n"
- modify_attrition_effect_TT: "§Y军队损耗§!: [?ITA_attrition_change|%-]\n"
- modify_conscription_effect_TT: "§Y适役人口§!: [?ITA_conscription_change|%+]\n"
- modify_justify_war_goal_time_effect_TT: "§Y正当化战争目标所需时间§!: [?ITA_justify_war_goal_time_change|%-]\n"
- modify_supply_consumption_factor_effect_TT: "§Y军队补给消耗§!：[?ITA_supply_consumption_factor_change|%-]\n"
- modify_navy_fuel_consumption_factor_effect_TT: "§Y海军燃料消耗§!：[?ITA_navy_fuel_consumption_factor_change|%-]\n"
- modify_navy_max_range_factor_TT: "§Y海军作战距离§!：[?ITA_navy_max_range_factor_change|%+]\n"
- modify_production_factory_max_efficiency_factor_TT: "§Y生产效率上限§!：[?ITA_production_factory_max_efficiency_factor_change|%+]\n"
- modify_production_factory_efficiency_gain_factor_TT: "§Y生产效率增长§!：[?ITA_production_factory_efficiency_gain_factor_change|%+]\n"
- modify_license_production_speed_TT: "§Y许可装备生产速度§!：[?ITA_license_production_speed_change|%+]\n"
- modify_send_volunteer_divisions_required_effect_TT: "§Y武力干预的师数上限§!：[?ITA_send_volunteer_divisions_required_change|%-]\n"
- modify_air_volunteer_cap_effect_TT: "§Y志愿空军飞机上限§!：[?ITA_air_volunteer_cap_change|+]\n"
- modify_send_volunteer_factor_effect_TT: "§Y派遣干涉军所需的部队§!：[?ITA_send_volunteer_factor_change|%+]\n"
- modify_experience_gain_army_effect_TT: "§Y陆军经验增长§!：[?ITA_experience_gain_army_change|+]每日\n"
- modify_cas_damage_reduction_TT: "§Y针对近距支援机的伤害减少§!：[?ITA_cas_damage_reduction_change|%+]\n"
- modify_air_superiority_bonus_in_combat_TT: "§Y战斗中的空中优势加成§!：[?ITA_air_superiority_bonus_in_combat_change|%+]\n"
- modify_air_strategic_bomber_bombing_factor_TT: "§Y战略轰炸§!：[?ITA_air_strategic_bomber_bombing_factor_change|%+]\n"
- modify_industry_air_damage_factor_TT: "§Y工业轰炸易损性§!：[?ITA_industry_air_damage_factor_change|%-]\n"
- modify_foreign_influence_modifier_TT: "§Y外国影响§!：[?ITA_foreign_influence_modifier_change|%+]\n"
- modify_foreign_influence_defense_modifier_TT: "§Y抵御外国影响§!：[?ITA_foreign_influence_defense_modifier_change|%+]\n"
- modify_subjects_autonomy_gain_TT: "§Y日常附庸自制度下降§!：[?ITA_subjects_autonomy_gain_change|-]\n"
  xylella_epidemic: "木杆菌流行病"
  xylella_epidemic_TT: "苛养木杆菌是一种极具破坏性的害虫，对橄榄树尤其危险。\n\n  这将使我们每周的额外费用增加§R0.05§!B 。"
  ITA_multipurpose_modifier: "多用途修正器"
@@ -2139,7 +2085,6 @@
  ITA_draw_closer_to_far_east_TT: "我们在远东的影响力不断增强。\n§Y所有提到的国家都获得影响力，中国获得的影响力最大§!\n"
  ITA_reform_approval_TT: "尽管意大利是一个与美国和欧洲有着密切文化联系的西方大国，但意大利的政治和经济文化与阿根廷等南美国家更为相似，庇隆主义和新凯恩斯主义观点在所有政党中占主导地位，甚至包括那些反对派，那些宣称自己是自由主义者的人。因此，除非主流文化发生重大转变，否则任何自由化尝试都很难被民众消化。"
  ITA_unlock_policy_decision_TT: "此国策将解锁一项决议，以实施相关政策。"
- modify_reform_expectance_effect_TT: "§Y改革前景§!：[?drift_switch_change|3+]\n"
  ITA_ruling_party_popularity_change_decision_TT: "此决策引起的政党支持率变化取决于当前执政党。"
  ITA_tax_evasion_TT: "降低§Y税收收入§!§R10%§!\n"
  ITA_building_abuse_TT: "减少§Y税收收入§!§R5%§!\n"
@@ -2439,8 +2384,6 @@
  ITA_build_waste_incinerators_desc: "垃圾焚烧炉能够处理大量垃圾并将其转化为有价值的能源，且排放量接近于零。尽管如此，邻避者、黑手党和政治无能导致垃圾处理仍然是城市的一个大问题，特别是在南方，这些城市往往最终将这个问题委托给可疑的人。"
  ITA_protect_against_pizzo: "提供保护费阻止"
  ITA_protect_against_pizzo_desc: "§t黑帮§!通过一种名为保护费的事实上的税收对领土实施控制，这是一种不可拒绝的费用，以换取保护。如果拒绝支付这种保护费用，往往会给那些拒绝勒索的人的商业活动带来不愉快的事件。"
- modify_max_command_power_TT: "§Y最大指挥点数§!： [?ITA_max_command_power_change|+]\n"
- modify_transport_capacity_TT: "§Y部队运输船需求§!： [?ITA_transport_capacity_change|%-]\n"
  ITA_civil_war_partisan_activity: "游击队活动"
  ITA_civil_war_partisan_activity_TT: "正如对这种分裂性冲突所预期的那样，很大一部分平民虽然没有直接参与战斗，但却向其同情一方的士兵提供情报、物资、住所和保护。"
  has_leftwing_populist_government_TT: "必须有一个左翼民粹主义执政党。"
@@ -2482,25 +2425,12 @@
  ITA_subsidize_rooftop_solar_TT: "\n§R上述费用适用于每个省。§!\n"
  ITA_southern_wind_power: "南方风电"
  ITA_southern_wind_power_desc: "意大利南部的陆上和海上风力发电潜力巨大。"
- modify_agricolture_productivity_modifier_effect_TT: "§Y农业生产率§!：[?ITA_agricolture_productivity_modifier_change|%+]\n"
- modify_civilian_factories_productivity_effect_TT: "§Y民用工厂生产率§!：[?ITA_civilian_factories_productivity_change|%+]\n"
- modify_military_factories_productivity_effect_TT: "§Y军用工厂生产率§!：[?ITA_military_factories_productivity_change|%+]\n"
- modify_dockyard_productivity_effect_TT: "§Y海军船坞生产率§!：[?ITA_dockyard_productivity_change|%+]\n"
- modify_offices_productivity_effect_TT: "§Y办公园区生产率§!：[?ITA_offices_productivity_change|%+]\n"
- modify_civ_facs_worker_requirement_modifier_effect_TT: "§Y民用工厂劳动力需求§!：[?ITA_civ_facs_worker_requirement_modifier_change|%-]\n"
- modify_mil_facs_worker_requirement_modifier_effect_TT: "§Y军用工厂劳动力需求§!：[?ITA_mil_facs_worker_requirement_modifier_change|%-]\n"
- modify_offices_worker_requirement_modifier_effect_TT: "§Y办公园区劳动力需求§!：[?ITA_offices_worker_requirement_modifier_change|%-]\n"
- modify_energy_gain_TT: "§Y发电量§!：[?ITA_energy_gain_change|+]GW\n"
  ITA_euro_partners_debt_assurances: "欧洲合作伙伴债务保证"
  ITA_euro_partners_debt_assurances_desc: "经过几十年的不计后果的支出，意大利陷入了巨额公共债务的泥潭，并且在加入欧元区之前还受到严重通货膨胀的困扰。尽管意大利做出了一些牺牲，但还是成功加入了欧元区。这极大地提高了该国的金融可信度，降低了利率。\n\n这一国策允许利率起始降低 6%，但每月下降 0.1%。"
  ITA_exploit_superiority: "利用优势"
  ITA_exploit_superiority_desc: "我们阵营庞大的空中资产将确保对天空的完全控制，没有必要浪费更多的资源来获得我们已经拥有的东西，我们应该集中精力从我们的空中优势中获取最大可能的优势。"
  ITA_achieve_superiority: "取得优势"
  ITA_achieve_superiority_desc: "我们必须将有限的资源集中在实现空中优势上，因为当敌人控制天空时，就没有完美的轰炸机。"
- modify_air_air_superiority_attack_factor_TT: "§Y空中优势任务攻击§!：[?ITA_air_air_superiority_attack_factor_change|%+]\n"
- modify_air_air_superiority_agility_factor_TT: "§Y空中优势任务雷达优势§!：[?ITA_air_air_superiority_agility_factor_change|%+]\n"
- modify_air_close_air_support_org_damage_factor_TT: "§Y近距空中支援对组织度伤害§!：[?ITA_air_close_air_support_org_damage_factor_change|%+]\n"
- modify_air_cas_efficiency_TT: "§Y近距离空中支援效率§!：[?ITA_air_cas_efficiency_change|%+]\n"
  ITA_alenia_aermacchi_merger: "阿莱尼亚航空公司与马基航空公司合并"
  ITA_alenia_aermacchi_merger_desc: "阿莱尼亚航空公司和马基航空公司是意大利军用飞机制造领域最大的两家公司，它们都在一定程度上受到意大利国家的控制，合并它们将有助于减少不必要的结构并提高效率。"
  ITA_alenia_aermacchi_merger_TT: "这会将阿莱尼亚航空公司和马基航空公司合并为新的阿莱尼亚马基公司，并保持相同数量的特质点。\n\n(只有已分配的特质才计入容量)"
@@ -2527,3 +2457,73 @@
  ITA_specialize_mangusta_spirit_loc_3: "§YAttack Helicopters§!生产花费：§R+15%§!\n§YAttack Helicopters§!对人员杀伤：§G+30%§!"
  ITA_specialize_otomatic_spirit_loc_1: "§Y自行防空炮§!生产花费：§G-15%§!\n§Y自行防空炮§!可靠性：§R-7.5%§!"
  ITA_specialize_otomatic_spirit_loc_2: "§Y自行防空炮§!生产花费：§R+15%§!\n§Y自行防空炮§!对空攻击：§G+30%§!"
+ ITA_ITA_modify_article_18: "修改劳工法第十八条"
+ ITA_ITA_modify_article_18_desc: "《劳工法》第18条规定雇主极难解雇员工，我们的就业市场因此受到影响。修改该法肯定会引发反对派的“强迫劳动”和“奴役”指控，但这在现实中只是常识。"
+ ITA_ITA_modify_article_18_decision: "修改劳工法第十八条"
+ ITA_ITA_modify_article_18_decision_desc: "《劳工法》第18条规定雇主极难解雇员工，我们的就业市场因此受到影响。修改该法肯定会引发反对派的“强迫劳动”和“奴役”指控，但这在现实中只是常识。"
+ ITA_ITA_modify_article_18_decision_repeal: "撤回劳工法第十八条修正案。"
+ ITA_modify_additional_expenses_effect_TT: "这将改变我们的每周支出：[?additional_expenses_change|-]B\n"
+ ITA_modify_nimby_modifier_effect_TT: "这就修改邻避症候群的效果：[?nimby_culture_change|%+]\n"
+ ITA_modify_tax_gain_multiplier_modifier_effect_TT: "§Y税收乘数§!：[?ITA_tax_gain_multiplier_modifier_change|%+]\n"
+ ITA_modify_interest_rate_multiplier_modifier_effect_TT: "§Y利率§!：[?ITA_interest_rate_multiplier_modifier_change|-]%\n"
+ ITA_modify_bureaucracy_cost_multiplier_modifier_effect_TT: "§Y官僚体系开支§!：[?ITA_bureaucracy_cost_multiplier_modifier_change|%-]\n"
+ ITA_modify_police_cost_multiplier_modifier_effect_TT: "§Y警力开支§!：[?ITA_police_cost_multiplier_modifier_change|%-]\n"
+ ITA_modify_education_cost_multiplier_modifier_effect_TT: "§Y教育开支§!：[?ITA_education_cost_multiplier_modifier_change|%-]\n"
+ ITA_modify_health_cost_multiplier_modifier_effect_TT: "§Y医保开支§!：[?ITA_health_cost_multiplier_modifier_change|%-]\n"
+ ITA_modify_social_cost_multiplier_modifier_effect_TT: "§Y社会开支§!：[?ITA_social_cost_multiplier_modifier_change|%-]\n"
+ ITA_modify_army_personnel_cost_multiplier_modifier_effect_TT: "§Y陆军工资§!：[?ITA_army_personnel_cost_multiplier_modifier_change|%-]\n"
+ ITA_modify_navy_personnel_cost_multiplier_modifier_effect_TT: "§Y海军工资§!：[?ITA_navy_personnel_cost_multiplier_modifier_change|%-]\n"
+ ITA_modify_airforce_personnel_cost_multiplier_modifier_effect_TT: "§Y空军工资§!：[?ITA_airforce_personnel_cost_multiplier_modifier_change|%-]\n"
+ ITA_modify_equipment_cost_multiplier_modifier_effect_TT: "§Y军队装备花费§!：[?ITA_equipment_cost_multiplier_modifier_change|%-]\n"
+ ITA_modify_global_building_slots_factor_effect_TT: "§Y当地最大工厂数§!：[?ITA_global_building_slots_factor_change|%+]\n"
+ ITA_modify_MONTHLY_POPULATION_effect_TT: "§Y月度人力§!：[?ITA_MONTHLY_POPULATION_change|%+]\n"
+ ITA_modify_production_speed_buildings_factor_effect_TT: "§Y建造速度§!：[?ITA_production_speed_buildings_factor_change|%+]\n"
+ ITA_modify_stability_factor_effect_TT: "§Y稳定度§!：[?ITA_stability_factor_change|%+]\n"
+ ITA_modify_stability_weekly_effect_TT: "§Y每周稳定度§!：[?ITA_stability_weekly_change|%+]\n"
+ ITA_modify_research_speed_factor_effect_TT: "§Y研究速度§!：[?ITA_research_speed_factor_change|%+]\n"
+ ITA_modify_army_org_regain_effect_TT: "§Y军队组织度恢复§!：[?ITA_army_org_regain_change|%+]\n"
+ ITA_modify_army_org_Factor_effect_TT: "§Y军队组织度§!：[?ITA_army_org_Factor_change|%+]\n"
+ ITA_modify_repair_speed_factor_effect_TT: "§Y海军维修速度§!：[?ITA_repair_speed_factor_change|%+]\n"
+ ITA_modify_refit_speed_effect_TT: "§Y海军改装速度§!：[?ITA_refit_speed_change|%+]\n"
+ ITA_modify_positioning_effect_TT: "§Y阵位§!：[?ITA_positioning_change|%+]\n"
+ ITA_modify_screening_without_screens_effect_TT: "§Y无屏卫舰的屏卫§!：[?ITA_screening_without_screens_change|%+]\n"
+ ITA_modify_org_loss_when_moving_effect_TT: "§Y移动中组织度损失§![?ITA_org_loss_when_moving_change|%-]\n"
+ ITA_modify_army_attack_factor_effect_TT: "§Y陆军攻击§!：[?ITA_army_attack_factor_change|%+]\n"
+ ITA_modify_army_defence_factor_effect_TT: "§Y陆军防御§!：[?ITA_army_defence_factor_change|%+]\n"
+ ITA_modify_training_time_factor_effect_TT: "§Y陆军训练时间§!：[?ITA_training_time_factor_change|%-]\n"
+ ITA_modify_attrition_effect_TT: "§Y陆军损耗§!：[?ITA_attrition_change|%-]\n"
+ ITA_modify_conscription_effect_TT: "§Y适役人口§!：[?ITA_conscription_change|%+]\n"
+ ITA_modify_justify_war_goal_time_effect_TT: "§Y正当化战争目标所需时间§!：[?ITA_justify_war_goal_time_change|%-]\n"
+ ITA_modify_supply_consumption_factor_effect_TT: "§Y军队补给消耗§!：[?ITA_supply_consumption_factor_change|%-]\n"
+ ITA_modify_navy_fuel_consumption_factor_effect_TT: "§Y海军燃料消耗§!：[?ITA_navy_fuel_consumption_factor_change|%-]\n"
+ ITA_modify_navy_max_range_factor_TT: "§Y海军作战距离§!：[?ITA_navy_max_range_factor_change|%+]\n"
+ ITA_modify_production_factory_max_efficiency_factor_TT: "§Y生产效率上限§!：[?ITA_production_factory_max_efficiency_factor_change|%+]\n"
+ ITA_modify_production_factory_efficiency_gain_factor_TT: "§Y生产效率增长§!：[?ITA_production_factory_efficiency_gain_factor_change|%+]\n"
+ ITA_modify_license_production_speed_TT: "§Y许可装备生产速度§!：[?ITA_license_production_speed_change|%+]\n"
+ ITA_modify_send_volunteer_divisions_required_effect_TT: "§Y武力干预的师数上限§!：[?ITA_send_volunteer_divisions_required_change|%-]\n"
+ ITA_modify_air_volunteer_cap_effect_TT: "§Y空军志愿飞机上限§!：[?ITA_air_volunteer_cap_change|+]\n"
+ ITA_modify_send_volunteer_factor_effect_TT: "§Y派遣志愿军需要的陆军师数量§!：[?ITA_send_volunteer_factor_change|%+]\n"
+ ITA_modify_experience_gain_army_effect_TT: "§Y陆军经验增长§!：[?ITA_experience_gain_army_change|+]每日\n"
+ ITA_modify_cas_damage_reduction_TT: "§Y近距支援造成伤害降低§!：[?ITA_cas_damage_reduction_change|%+]\n"
+ ITA_modify_air_superiority_bonus_in_combat_TT: "§Y战斗中空优加成§!：[?ITA_air_superiority_bonus_in_combat_change|%+]\n"
+ ITA_modify_air_air_superiority_attack_factor_TT: "§Y空中优势任务攻击§!：[?ITA_air_air_superiority_attack_factor_change|%+]\n"
+ ITA_modify_air_air_superiority_agility_factor_TT: "§Y空中优势任务雷达优势§!：[?ITA_air_air_superiority_agility_factor_change|%+]\n"
+ ITA_modify_air_close_air_support_org_damage_factor_TT: "§Y近距空中支援对组织度伤害§!：[?ITA_air_close_air_support_org_damage_factor_change|%+]\n"
+ ITA_modify_air_cas_efficiency_TT: "§Y近距离空中支援效率§!：[?ITA_air_cas_efficiency_change|%+]\n"
+ ITA_modify_air_strategic_bomber_bombing_factor_TT: "§Y战略轰炸§!：[?ITA_air_strategic_bomber_bombing_factor_change|%+]\n"
+ ITA_modify_industry_air_damage_factor_TT: "§Y工业轰炸易损性§!：[?ITA_industry_air_damage_factor_change|%-]\n"
+ ITA_modify_foreign_influence_modifier_TT: "§Y外国影响力§!：[?ITA_foreign_influence_modifier_change|%+]\n"
+ ITA_modify_foreign_influence_defense_modifier_TT: "§Y外国影响力防御§!：[?ITA_foreign_influence_defense_modifier_change|%+]\n"
+ ITA_modify_subjects_autonomy_gain_TT: "§Y每日附属自制度降低§!：[?ITA_subjects_autonomy_gain_change|-]\n"
+ ITA_modify_max_command_power_TT: "§Y最大指挥点数§!：[?ITA_max_command_power_change|+]\n"
+ ITA_modify_transport_capacity_TT: "§Y部队运输船需求§!： [?ITA_transport_capacity_change|%-]\n"
+ ITA_modify_agricolture_productivity_modifier_effect_TT: "§Y农业生产率§!：[?ITA_agricolture_productivity_modifier_change|%+]\n"
+ ITA_modify_civilian_factories_productivity_effect_TT: "§Y民用工厂生产率§!：[?ITA_civilian_factories_productivity_change|%+]\n"
+ ITA_modify_military_factories_productivity_effect_TT: "§Y军用工厂生产率§!：[?ITA_military_factories_productivity_change|%+]\n"
+ ITA_modify_dockyard_productivity_effect_TT: "§Y海军船坞生产率§!：[?ITA_dockyard_productivity_change|%+]\n"
+ ITA_modify_offices_productivity_effect_TT: "§Y办公园区生产率§!：[?ITA_offices_productivity_change|%+]\n"
+ ITA_modify_civ_facs_worker_requirement_modifier_effect_TT: "§Y民用工厂劳动力需求§!：[?ITA_civ_facs_worker_requirement_modifier_change|%-]\n"
+ ITA_modify_mil_facs_worker_requirement_modifier_effect_TT: "§Y军用工厂劳动力需求§!：[?ITA_mil_facs_worker_requirement_modifier_change|%-]\n"
+ ITA_modify_offices_worker_requirement_modifier_effect_TT: "§Y办公园区劳动力需求§!：[?ITA_offices_worker_requirement_modifier_change|%-]\n"
+ ITA_modify_energy_gain_TT: "§Y发电量§!：[?ITA_energy_gain_change|+]GW\n"
+ ITA_modify_reform_expectance_effect_TT: "§Y改革前景§!：[?drift_switch_change|3+]\n"
