--- a/localisation/simp_chinese/unit_names_l_simp_chinese.yml
+++ b/localisation/simp_chinese/unit_names_l_simp_chinese.yml
@@ -16,11 +16,11 @@
  AIR_WING_NAME_NOR_FALLBACK: "第$NUMBER$联队"
  AIR_WING_NAME_NOR_GENERIC: "$NR$$NAME$"
  AIR_WING_NAME_EST_GENERIC: "$NR$ $NAME$"
- AIR_WING_NAME_EST_FALLBACK: "$NUMBER$ 航空队"
+ AIR_WING_NAME_EST_FALLBACK: "$NUMBER$航空队"
  AIR_WING_NAME_LAT_GENERIC: "$NR$ $NAME$"
- AIR_WING_NAME_LAT_FALLBACK: "$NUMBER$ 空军"
+ AIR_WING_NAME_LAT_FALLBACK: "$NUMBER$空军"
  AIR_WING_NAME_LIT_GENERIC: "$NR$ $NAME$"
- AIR_WING_NAME_LIT_FALLBACK: "$NUMBER$ 航空队"
+ AIR_WING_NAME_LIT_FALLBACK: "$NUMBER$航空队"
  AIR_WING_NAME_KAZ_FALLBACK: "$NUMBER$ Aua zhymary"
  AIR_WING_NAME_KAZ_GENERIC: "$NR$ $NAME$"
  AIR_WING_NAME_KYR_FALLBACK: "$NUMBER$ Aba bejishi"
@@ -29,7 +29,7 @@
  AIR_WING_NAME_UZB_GENERIC: "$NR$ $NAME$"
  AIR_WING_NAME_VEN_FALLBACK: "$NUMBER$空军联队"
  AIR_WING_NAME_VEN_GENERIC: "$NR$$NAME$"
- AIR_WING_NAME_AST_FALLBACK: "皇家澳大利亚空军第$NUMBER$连队"
+ AIR_WING_NAME_AST_FALLBACK: "皇家澳大利亚空军第$NUMBER$联队"
  AIR_WING_NAME_AST_GENERIC: "$NAME$ $NR$"
  AIR_WING_NAME_SPR_FALLBACK: "$NUMBER$空军联队"
  AIR_WING_NAME_SPR_GENERIC: "$NR$ $NAME$"
