--- a/localisation/english/MD_subideology_parties_l_english.yml
+++ b/localisation/english/MD_subideology_parties_l_english.yml
@@ -4334,42 +4334,60 @@
  AFG.liberalism: "£generic_liberalism_small Hezb-e Kongra Milli"
  AFG.liberalism_desc: ""
  AFG.liberalism_2017: "£AFG_liberalism_2017 Basej-e Milli"
+ AFG.liberalism_2017_icon: "£AFG_liberalism_2017"
  AFG.liberalism_2017_desc: ""
  AFG.socialism: "£generic_socialism_small Hezb-e Muttrqa-e Dimukratik"
  AFG.socialism_desc: ""
  AFG.Western_Autocracy: "£AFG_western_autocracy Afghan Independents"
+ AFG.Western_Autocracy_icon: "£AFG_western_autocracy"
  AFG.Western_Autocracy_desc: ""
  AFG.Communist-State: "£AFG_communist_state Hezb-e Komunist"
+ AFG.Communist-State_icon: "£AFG_communist_state"
  AFG.Communist-State_desc: ""
  AFG.anarchist_communism: "£AFG_anarchist_communism Hezb-e Muttahed-e Melli"
+ AFG.anarchist_communism_icon: "£AFG_anarchist_communism"
  AFG.anarchist_communism_desc: ""
  AFG.Conservative: "£AFG_conservative Junbish-i-Milli"
+ AFG.Conservative_icon: "£AFG_conservative"
  AFG.Conservative_desc: ""
  AFG.Autocracy: "£AFG_autocracy Hezb-e Dimukratik-e Khalq"
+ AFG.Autocracy_icon: "£AFG_autocracy"
  AFG.Autocracy_desc: ""
  AFG.Mod_Vilayat_e_Faqih: "£AFG_moderate_shiites Hezb-e Wahdat"
+ AFG.Mod_Vilayat_e_Faqih_icon: "£AFG_moderate_shiites"
  AFG.Mod_Vilayat_e_Faqih_desc: ""
  AFG.Vilayat_e_Faqih: "£AFG_hardline_shiites Harakat-e Islami"
+ AFG.Vilayat_e_Faqih_icon: "£AFG_hardline_shiites"
  AFG.Vilayat_e_Faqih_desc: ""
  AFG.Caliphate: "£AFG_salafist_jihadism Taliban"
+ AFG.Caliphate_icon: "£AFG_salafist_jihadism"
  AFG.Caliphate_desc: ""
  AFG.Kingdom: "£AFG_kingdom Hezb-e Islami"
+ AFG.Kingdom_icon: "£AFG_kingdom"
  AFG.Kingdom_desc: ""
  AFG.neutral_Social: "£AFG_neutral_social Hezb-e Watan"
+ AFG.neutral_Social_icon: "£AFG_neutral_social"
  AFG.neutral_Social_desc: ""
  AFG.Neutral_Autocracy: "£AFG_neutral_autocracy Tanzim-e Dahwat-e Islami"
+ AFG.Neutral_Autocracy_icon: "£AFG_neutral_autocracy"
  AFG.Neutral_Autocracy_desc: ""
  AFG.Neutral_Muslim_Brotherhood: "£AFG_neutral_muslim_brotherhood Jamiat-e Islami"
+ AFG.Neutral_Muslim_Brotherhood_icon: "£AFG_neutral_muslim_brotherhood"
  AFG.Neutral_Muslim_Brotherhood_desc: ""
  AFG.Neutral_conservatism: "£AFG_neutral_conservatism Etelaf-e Milli"
+ AFG.Neutral_conservatism_icon: "£AFG_neutral_conservatism"
  AFG.Neutral_conservatism_desc: ""
  AFG.Neutral_Communism: "£AFG_neutral_communism Sazman-i Rihayi"
+ AFG.Neutral_Communism_icon: "£AFG_neutral_communism"
  AFG.Neutral_Communism_desc: ""
  AFG.Nat_Autocracy: "£AFG_nat_autocracy Afghan Armed Forces"
+ AFG.Nat_Autocracy_icon: "£AFG_nat_autocracy"
  AFG.Nat_Autocracy_desc: ""
  AFG.Nat_Populism: "£AFG_nat_populism Mahaz-e Milli-ye Islami"
+ AFG.Nat_Populism_icon: "£AFG_nat_populism"
  AFG.Nat_Populism_desc: ""
  AFG.Monarchist: "£AFG_monarchist Barakzai Dynasty"
+ AFG.Monarchist_icon: "£AFG_monarchist"
  AFG.Monarchist_desc: ""
  AFR.Nat_Autocracy: "£generic_Nat_Autocracy_small Armed Forces Revolutionary Council"
  AFR.Nat_Autocracy_desc: ""
