--- a/localisation/english/MD_focus_SOV_l_english.yml
+++ b/localisation/english/MD_focus_SOV_l_english.yml
@@ -32,8 +32,8 @@
  SOV_arctic_gas_exploration_desc: "The Arctic regions contain vast reserves of natural gas. We can become energy independent and a net exporter of energy if we simply tap into such reserves."
  SOV_ensure_oligarch_submission: "Ensure Oligarch Submission"
  SOV_ensure_oligarch_submission_desc: "Under Boris Yeltsin, Russia became the biggest mafia state in the world. The oligarchs especially were a major contributor to the economic madness that was the 90s. To keep this from happening again, we need to show the oligarchs who's boss."
- SOV_remove_guzinsky: "Remove Gusinsky"
- SOV_remove_guzinsky_desc: "Vladimir Gusinsky is a huge media mogul, yet he refuses to cooperate with the government and oligarchs. We need to deal with him."
+ SOV_remove_guzinsky: "Remove Guzinsky"
+ SOV_remove_guzinsky_desc: "Vladimir Guzinsky is a huge media mogul, yet he refuses to cooperate with the government and oligarchs. We need to deal with him."
  SOV_delay_sibirneft_merger: "Delay Sibneft Merger"
  SOV_delay_sibirneft_merger_desc: "In April 2003, Yukos Oil CEO Mikhail Khodorkovsky announced that Yukos would merge with Sibneft, creating an oil company with reserves equal to those of Western petroleum multinationals. But the powers-that-be decided that he would not be the person to do so, fabricating charges of corruption and tax evasion."
  SOV_gen_3_nuclear_plants: "Generation 3+ Nuclear Reactors"
@@ -1110,7 +1110,7 @@
  SOV_full_ratnik_conversion_desc: "The Ratnik program development is complete. Now it is time to equip our troops."
  SOV_rosgvardia: "Form the Rosgvardia"
  SOV_rosgvardia_desc: "The National Guard of Russia (Rosgvardia) is the internal military force of Russia, comprising an independent agency that reports directly to the President of Russia. The National Guard is separate from the Russian Armed Forces. The National Guard has the stated mission of securing Russia's borders, taking charge of gun control, combating terrorism and organized crime, protecting public order and guarding important state facilities."
- SOV_rosguard_start_org: "Start Forming Bridages"
+ SOV_rosguard_start_org: "Start Forming Brigades"
  SOV_rosguard_start_org_desc: "It's time to start forming the first brigades"
  SOV_rosguard_armor: "Provide Armored Vehicles"
  SOV_rosguard_armor_desc: "Armored vehicles will be very useful to us"
