--- a/localisation/english/MD_focus_SUB_l_english.yml
+++ b/localisation/english/MD_focus_SUB_l_english.yml
@@ -806,8 +806,8 @@
  subject_rus.24.d: "Our state now faces a choice of where to go in the new millennium, we can continue our path as part of Russia, or take a risk and try to gain our independence"
  subject_rus.24.a: "We are together with Russia"
  subject_rus.24.b: "We will go our own way"
- subject_rus.25.t: "Tatarstan Has Declared its Independence"
- subject_rus.25.d: "Tatarstan has announced that it is now an independent state. We urgently need to decide what to do"
+ subject_rus.25.t: "[FROM.GetNameWithFlag] Has Declared its Independence"
+ subject_rus.25.d: "[FROM.GetNameWithFlag] has announced that it is now an independent state. We urgently need to decide what to do"
  subject_rus.25.a: "Suppress the separatists"
  subject_rus.25.b: "Give them freedom"
 
