--- a/Changelog.txt
+++ b/Changelog.txt
@@ -45,6 +45,9 @@ v1.10.1
   - Fixed a display bug with the Ba'ath party for Iraq
   - Fixed an issue with the post war focuses for Iraq being unavailable if the U.S. collapsed
   - Fixed an issue with Iraq continuously inviting France to their economic union
+  - Fixed Paradrop bug with aircraft
+  - Fixed a bug with quadcopter drones. No more internal bays for you!
+  - Fixed GFX bug with land doctrines
 
  Content:
   - The Communist Party of Cuba can now take the pro-LGBT policies
