small fixes and standards

--- a/localisation/english/replace/replaced_from_vanilla_research_l_english.yml
+++ b/localisation/english/replace/replaced_from_vanilla_research_l_english.yml
@@ -46,3 +46,4 @@
  CAT_encryption_tech: "Encryption Tech"
  CAT_decryption_tech: "Decryption Tech"
  CAT_nfibers_research: "Nanofibers Tech"
+ CAT_space_research: "Space Tech"
