--- a/Changelog.txt
+++ b/Changelog.txt
@@ -49,6 +49,7 @@ v1.10.1
 
  Graphics:
   - Added unique graphics to the "Pillar of Counter Terrorism" and "French Foreign Legion" idea icons
+  - Added new Franch plane model for non-BBA players which already implement into BBA in 1.10.0
 
  Game Rules:
   - Added 1% and 1.5% for Influence Spread Gain to Game Rules
