--- a/Changelog.txt
+++ b/Changelog.txt
@@ -52,7 +52,7 @@ v1.10.1
   - Fixed Paradrop bug with aircraft
   - Fixed a bug with quadcopter drones. No more internal bays for you!
   - Fixed GFX bug with land doctrines
-
+  - Fixed a bug with Kosovo being unable to appease Serbs
  Content:
   - The Communist Party of Cuba can now take the pro-LGBT policies
   - Added HLS, SMA, MNC, ADO, and LIC to the possible European Member States
